--- a/cfg/invert.cfg
+++ b/cfg/invert.cfg
@@ -1,7 +1,7 @@
 atmos{
   ID=Simple Atmosphere
   TYPE=SPINOR
-  FILE=falc_21.dat
+  FILE=falc.dat
   GEOMETRY=PLANEPARALLEL
   RTSOLVER=Bezier
 #  ID=MuRAM snapshot
@@ -26,9 +26,11 @@ obs{
   EL=3.14159265359
   AZ=0.0
   NAME=spectrum.dat
-  LAMBDA = 5894.0 - 5898.0
-  DLAMBDA = 0.05
+  LAMBDA = 5894.007658536585143 - 5897.181951219512646
+  DLAMBDA = 0.009677721594290986
 }
+
+
 
 #LAMBDA = 5894.0 - 5898.0
 #LAMBDA = 4339.4 - 4340.0
