Working on the "compression" of response functions so we compute immediately response to parameters. Debugging add_response_contributions so they worok properly with \tau scale

--- a/cfg/sodium.cfg
+++ b/cfg/sodium.cfg
@@ -6,7 +6,7 @@ atom{
   Z=2
   MASS=22.98
   ABUND=1.7378e-06
-  NLTE = 0
+  NLTE = 1
   ion{
     CHARGE=0
     EION=5.13861
@@ -85,6 +85,19 @@ atom{
     partition{
       TYPE=CONST
       VALUE=1.0
+    }
+    level{
+      N=1
+      EE=0      
+      G=1
+      J=0
+      L=0
+      GL=0.0
+      bf{
+        TYPE=PHY
+        LAMBDA= 100
+        VALUE=1E-16
+      }
     }
   }
   ion{
