--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,10 @@
 **/*.log
 **/*.o
 **/*.a
+**/*.png
+**/*.eps
+*.png
+*.eps
 *.o
 *.txt
 *.dat
@@ -10,3 +14,5 @@
 *.a
 master/imaster
 slave/islave
+jsub/jsub
+CVS/
