--- a/cfg/invert.cfg
+++ b/cfg/invert.cfg
@@ -45,3 +45,15 @@ obs{
 #EL=3.14159265359 # mu = 1
 #EL=1.7112577415047523 #mu = 0.14
 
+model{
+  ID=Mod 1
+  param{
+    NAME=Temperature
+    NODES=-4,-3,-2,-1,0,1
+    VLAUES=3000,3500,4500,5200,6400,7000
+  }
+}
+
+"Obs 1"=SYNTH("Simple Atmosphere"("Mod 1"))
+"Mod 1"=FIT("Simple Atmosphere","Obs 1","Obs 2",...)
+#("Mod 1","Mod 2",...)=FIT(("Simple Atmosphere","Atm 2",...),"Obs 1","Obs 2",...)
