model can be read into string now

--- a/cfg/invert.cfg
+++ b/cfg/invert.cfg
@@ -29,6 +29,14 @@ obs{
   DLAMBDA = 0.01
 }
 
+model{
+  parameter{
+  ID=TEMP
+  NODES=-5.0,-2.0,0.5
+  VALUES=5000,5000,5000
+  }
+}
+
 
 
 #LAMBDA = 5895.0 - 5897.0
