--- a/cfg/invert.cfg
+++ b/cfg/invert.cfg
@@ -29,6 +29,41 @@ obs{
   DLAMBDA = 0.01
 }
 
+model{
+  ID=Model 1
+  parameter{
+  ID=TEMP
+  TAU=-5.0,-2.0,0.5
+  VALUES=5000.0,5000.0,5000.0
+  }
+  parameter{
+  ID=VT
+  TAU=0
+  VALUES=1E5
+  }
+  parameter{
+  ID=VS
+  TAU=0
+  VALUES=2E5
+  }
+  parameter{
+  ID=B
+  TAU=0
+  VALUES=1000
+  }
+  parameter{
+  ID=THETA
+  TAU=0
+  VALUES=30.0
+  }
+  parameter{
+  ID=PHI
+  TAU=0
+  VALUES=45.0
+  }
+}
+
+
 
 #LAMBDA = 5895.0 - 5897.0
 #LAMBDA = 4339.4 - 4340.0
