--- a/cfg/invert.cfg
+++ b/cfg/invert.cfg
@@ -33,18 +33,18 @@ model{
   ID=Model 1
   parameter{
   ID=TEMP
-  TAU=-5.0,-2.0,0.5
-  VALUES=5000.0,5000.0,5000.0
+  TAU=-5.0, -3.2, -1.4, 0.5
+  VALUES=5000.0, 5500.0, 6000.0,6500.0
   }
   parameter{
   ID=VT
-  TAU=0
+  TAU=-0
   VALUES=1E5
   }
   parameter{
   ID=VS
   TAU=0
-  VALUES=2E5
+  VALUES=0E5
   }
   parameter{
   ID=B
@@ -62,6 +62,41 @@ model{
   VALUES=45.0
   }
 }
+
+model{
+  ID=Model 2
+  parameter{
+  ID=TEMP
+  TAU=-5.0, -3.2, -1.4, 0.5
+  VALUES=7400.0, 5500.0, 4600.0,6500.0
+  }
+  parameter{
+  ID=VT
+  TAU=0
+  VALUES=0.6E5
+  }
+  parameter{
+  ID=VS
+  TAU=0
+  VALUES=4E5
+  }
+  parameter{
+  ID=B
+  TAU=0
+  VALUES=1300
+  }
+  parameter{
+  ID=THETA
+  TAU=0
+  VALUES=45.0
+  }
+  parameter{
+  ID=PHI
+  TAU=0
+  VALUES=22.5
+  }
+}
+
 
 
 
