--- a/cfg/invert.cfg
+++ b/cfg/invert.cfg
@@ -24,7 +24,7 @@ obs{
   ID=Obs 1
   EL=3.14159265359
   AZ=0.0
-  NAME=spectrum.dat
+  NAME=cube.f0
   LAMBDA = 5893.0 - 5899.0
   DLAMBDA = 0.01
   INVERT=1
