file read/write development and debuggin

--- a/cfg/invert.cfg
+++ b/cfg/invert.cfg
@@ -24,8 +24,8 @@ obs{
   ID=Obs 1
   EL=3.14159265359
   AZ=0.0
-  NAME=cube.f0
-  LAMBDA = 5893.0 - 5899.0
+  NAME=spectrum.dat
+  LAMBDA = 5894.0 - 5897.0
   DLAMBDA = 0.01
   INVERT=1
 }
@@ -117,3 +117,5 @@ model{
 #EL=1.7112577415047523 #mu = 0.14
 #LAMBDA = 5894.007658536585143 - 5897.181951219512646
 #DLAMBDA = 0.009677721594290986
+#LAMBDA = 5887.80468293 - 5897.18195122
+#DLAMBDA = 0.00970731707275
