Implemented rudimentary output of fitted models and fitted profiles.

--- a/cfg/invert.cfg
+++ b/cfg/invert.cfg
@@ -1,7 +1,7 @@
 atmos{
   ID=Simple Atmosphere
   TYPE=SPINOR
-  FILE=falc_21.dat
+  FILE=falc_31.dat
   GEOMETRY=PLANEPARALLEL
   RTSOLVER=Bezier
 #  ID=MuRAM snapshot
@@ -24,9 +24,9 @@ obs{
   ID=Obs 1
   EL=3.14159265359
   AZ=0.0
-  NAME=spectrum.dat
-  LAMBDA = 5894.0 - 5897.0
-  DLAMBDA = 0.01
+  NAME=cube.f0
+  LAMBDA = 5887.7914658 - 5897.18400651
+  DLAMBDA = 0.00972312703583
   INVERT=1
 }
 
