added subfielding in x and y to add sub-gridding in lambda

--- a/cfg/invert.cfg
+++ b/cfg/invert.cfg
@@ -28,6 +28,8 @@ obs{
   LAMBDA = 5887.7914658 - 5897.18400651
   DLAMBDA = 0.00972312703583
   INVERT=1
+  XRANGE = 10,11
+  YRANGE = 10,11
 }
 
 model{
