visualising the results of the inversion maps are transposed in xy w.r.t each other

--- a/cfg/invert.cfg
+++ b/cfg/invert.cfg
@@ -24,12 +24,12 @@ obs{
   ID=Obs 1
   EL=3.14159265359
   AZ=0.0
-  NAME=cube.f0
+  NAME=cube_test_2.f0
   LAMBDA = 5887.7914658 - 5897.18400651
   DLAMBDA = 0.00972312703583
   INVERT=1
-  XRANGE = 1,100
-  YRANGE = 1,20
+  XRANGE = 1,201
+  YRANGE = 1,151
 }
 
 model{
