--- a/cfg/invert.cfg
+++ b/cfg/invert.cfg
@@ -28,8 +28,10 @@ obs{
   LAMBDA = 5887.7914658 - 5897.18400651
   DLAMBDA = 0.00972312703583
   INVERT=1
+  RETURN_ATMOS = 1
+  RETURN_MODEL = 0
   XRANGE = 1,201
-  YRANGE = 1,151
+  YRANGE = 1,151 
 }
 
 model{
