--- a/cfg/invert.cfg
+++ b/cfg/invert.cfg
@@ -30,8 +30,9 @@ obs{
   INVERT=1
   RETURN_ATMOS = 1
   RETURN_MODEL = 0
-  XRANGE = 1,100
-  YRANGE = 1,101 
+  XRANGE = 11,11
+  YRANGE = 81,81
+  LRANGE = 700,967 
 }
 
 model{
@@ -39,7 +40,7 @@ model{
   parameter{
   ID=TEMP
   TAU=-5.0, -3.2, -1.4, 0.5
-  VALUES=5000.0, 5500.0, 6000.0,6500.0
+  VALUES=8000.0, 7000.0, 4500.0,7200.0
   }
   parameter{
   ID=VT
@@ -48,13 +49,13 @@ model{
   }
   parameter{
   ID=VS
-  TAU=0
-  VALUES=1E5
+  TAU=-5.0,0.5
+  VALUES=1E5,0E5
   }
   parameter{
   ID=B
-  TAU=0
-  VALUES=1000
+  TAU=-5.0,0.5
+  VALUES=500,1000
   }
   parameter{
   ID=THETA
@@ -67,43 +68,6 @@ model{
   VALUES=45.0
   }
 }
-
-model{
-  ID=Model 2
-  parameter{
-  ID=TEMP
-  TAU=-5.0, -3.2, -1.4, 0.5
-  VALUES=7400.0, 5500.0, 4600.0,6500.0
-  }
-  parameter{
-  ID=VT
-  TAU=0
-  VALUES=0.6E5
-  }
-  parameter{
-  ID=VS
-  TAU=0
-  VALUES=4E5
-  }
-  parameter{
-  ID=B
-  TAU=0
-  VALUES=1300
-  }
-  parameter{
-  ID=THETA
-  TAU=0
-  VALUES=45.0
-  }
-  parameter{
-  ID=PHI
-  TAU=0
-  VALUES=22.5
-  }
-}
-
-
-
 
 #LAMBDA = 5895.0 - 5897.0
 #LAMBDA = 4339.4 - 4340.0
