--- a/cfg/invert.cfg
+++ b/cfg/invert.cfg
@@ -32,7 +32,8 @@ obs{
   RETURN_MODEL = 0
   XRANGE = 11,11
   YRANGE = 81,81
-  LRANGE = 700,967 
+  LRANGE = 700,950
+  MASK = sodium_lines_mask.dat
 }
 
 model{
@@ -49,13 +50,13 @@ model{
   }
   parameter{
   ID=VS
-  TAU=-5.0,0.5
-  VALUES=1E5,0E5
+  TAU=0
+  VALUES=1E5
   }
   parameter{
   ID=B
-  TAU=-5.0,0.5
-  VALUES=500,1000
+  TAU=0
+  VALUES=500
   }
   parameter{
   ID=THETA
