--- a/cfg/invert.cfg
+++ b/cfg/invert.cfg
@@ -1,7 +1,7 @@
 atmos{
   ID=Simple Atmosphere
   TYPE=SPINOR
-  FILE=falc_21.dat
+  FILE=falc.dat
   GEOMETRY=PLANEPARALLEL
   RTSOLVER=Bezier
 #  ID=MuRAM snapshot
@@ -24,15 +24,15 @@ obs{
   ID=Obs 1
   EL=3.14159265359
   AZ=0.0
-  NAME=cube_test_3.f0
-  LAMBDA = 5887.7914658 - 5897.18400651
-  DLAMBDA = 0.00972312703583
-  INVERT=1
+  NAME=spectrum.dat
+  LAMBDA = 5895.0 - 5897.0
+  DLAMBDA = 0.01
+  INVERT=0
   RETURN_ATMOS = 1
   RETURN_MODEL = 0
-  XRANGE = 11,11
-  YRANGE = 81,81
-  LRANGE = 600,967
+  XRANGE = 1,1
+  YRANGE = 1,1
+  LRANGE = 660,967
   MASK = sodium_lines_mask.dat
 }
 
@@ -69,3 +69,6 @@ model{
 #LAMBDA = 15647.0 - 15654.0
 #EL=3.14159265359 # mu = 1
 #EL=1.7112577415047523 #mu = 0.14
+
+#LAMBDA = 5887.7914658 - 5897.18400651
+#DLAMBDA = 0.00972312703583
