--- a/cfg/invert.cfg
+++ b/cfg/invert.cfg
@@ -1,7 +1,7 @@
 atmos{
   ID=Simple Atmosphere
   TYPE=SPINOR
-  FILE=falc.dat
+  FILE=falc_21.dat
   GEOMETRY=PLANEPARALLEL
   RTSOLVER=Bezier
 #  ID=MuRAM snapshot
@@ -24,10 +24,10 @@ obs{
   ID=Obs 1
   EL=3.14159265359
   AZ=0.0
-  NAME=spectrum.dat
-  LAMBDA = 5895.0 - 5897.0
-  DLAMBDA = 0.01
-  INVERT=0
+  NAME=cube_test_3.f0
+  LAMBDA = 5887.7914658 - 5897.18400651
+  DLAMBDA = 0.00972312703583
+  INVERT=1
   RETURN_ATMOS = 1
   RETURN_MODEL = 0
   XRANGE = 1,1
@@ -40,8 +40,8 @@ model{
   ID=Model 1
   parameter{
   ID=TEMP
-  TAU=-5.0, -3.2, -1.4, 0.5
-  VALUES=8000.0, 7000.0, 4500.0,7200.0
+  TAU=-5.4, -3.9, -2.4,-0.9, 0.6
+  VALUES=5000.0,5500.0,6000.0,6500.0,7000.0
   }
   parameter{
   ID=VT
