--- a/cfg/invert.cfg
+++ b/cfg/invert.cfg
@@ -1,7 +1,7 @@
 atmos{
   ID=Simple Atmosphere
   TYPE=SPINOR
-  FILE=falc_21.dat
+  FILE=falc_31.dat
   GEOMETRY=PLANEPARALLEL
   RTSOLVER=Bezier
 #  ID=MuRAM snapshot
@@ -40,8 +40,8 @@ model{
   ID=Model 1
   parameter{
   ID=TEMP
-  TAU=-5.4, -3.9,-2.4,-0.9, 0.6
-  VALUES=5000.0,5500.0,6000.0,7000.0,7500.0
+  TAU=-5.0, -3.2,-1.4, 0.5
+  VALUES=5000.0, 6000.0, 6500.0, 7000.0
   }
   parameter{
   ID=VT
