--- a/cfg/invert.cfg
+++ b/cfg/invert.cfg
@@ -1,7 +1,7 @@
 atmos{
   ID=Simple Atmosphere
   TYPE=SPINOR
-  FILE=falc_31.dat
+  FILE=falc_21.dat
   GEOMETRY=PLANEPARALLEL
   RTSOLVER=Bezier
 #  ID=MuRAM snapshot
@@ -30,14 +30,15 @@ obs{
   INVERT=1
   RETURN_ATMOS = 1
   RETURN_MODEL = 0
-  XRANGE = 1,50
-  YRANGE = 1,50
+  XRANGE = 1,1
+  YRANGE = 1,1
   LRANGE = 660,967
   MASK = sodium_lines_mask.dat
 }
 
 model{
   ID=Model 1
+  READ_FROM_FILE=0
   parameter{
   ID=TEMP
   TAU=-5.0, -3.2,-1.4, 0.5
