testing multi-cycle inversion

--- a/cfg/invert.cfg
+++ b/cfg/invert.cfg
@@ -1,7 +1,7 @@
 atmos{
   ID=Simple Atmosphere
   TYPE=SPINOR
-  FILE=falc_21.dat
+  FILE=falc_41.dat
   GEOMETRY=PLANEPARALLEL
   RTSOLVER=Bezier
 #  ID=MuRAM snapshot
@@ -30,15 +30,16 @@ obs{
   INVERT=1
   RETURN_ATMOS = 1
   RETURN_MODEL = 0
-  XRANGE = 1,1
-  YRANGE = 1,1
+  XRANGE = 2,2
+  YRANGE = 7,7
   LRANGE = 660,967
   MASK = sodium_lines_mask.dat
 }
 
 model{
   ID=Model 1
-  READ_FROM_FILE=0
+  READ_FROM_FILE=1
+  FILENAME=mag_test_nodes.f0
   parameter{
   ID=TEMP
   TAU=-5.0, -3.2,-1.4, 0.5
