small corrections so we can read input model from the cube of models

--- a/cfg/invert.cfg
+++ b/cfg/invert.cfg
@@ -30,16 +30,16 @@ obs{
   INVERT=1
   RETURN_ATMOS = 1
   RETURN_MODEL = 0
-  XRANGE = 2,2
-  YRANGE = 7,7
+  XRANGE = 1,100
+  YRANGE = 1,100
   LRANGE = 660,967
   MASK = sodium_lines_mask.dat
 }
 
 model{
   ID=Model 1
-  READ_FROM_FILE=1
-  FILENAME=mag_test_nodes.f0
+  READ_FROM_FILE=0
+  #FILENAME=mag_test_nodes.f0
   parameter{
   ID=TEMP
   TAU=-5.0, -3.2,-1.4, 0.5
