testing multi-cycle inverrions convolved with gaussian of width 3. Everything is supersmooth. Let's see if it work

--- a/cfg/invert.cfg
+++ b/cfg/invert.cfg
@@ -1,7 +1,7 @@
 atmos{
   ID=Simple Atmosphere
   TYPE=SPINOR
-  FILE=falc_41.dat
+  FILE=falc_31.dat
   GEOMETRY=PLANEPARALLEL
   RTSOLVER=Bezier
 #  ID=MuRAM snapshot
@@ -38,8 +38,8 @@ obs{
 
 model{
   ID=Model 1
-  READ_FROM_FILE=0
-  #FILENAME=mag_test_nodes.f0
+  READ_FROM_FILE=1
+  FILENAME=mag_test_nodes_2.f0
   parameter{
   ID=TEMP
   TAU=-5.0, -3.2,-1.4, 0.5
