For some reason responses do not work well. Tracking that...

--- a/cfg/iron_5892.cfg
+++ b/cfg/iron_5892.cfg
@@ -50,7 +50,7 @@ atom{
       bf{
         TYPE=PHY
         LAMBDA= 100
-        VALUE=0.092E-19
+        VALUE=0.092E-18
       }
     }
     level{
@@ -64,7 +64,7 @@ atom{
       bf{
         TYPE=PHY
         LAMBDA= 100
-        VALUE= 7.95E-19
+        VALUE= 7.95E-18
       }
     }
   }
@@ -81,6 +81,19 @@ atom{
         GAMMA=0.062,0.283,1.504,5.430,11.210
         ALPHA=17.0494,32.3783,34.3184,420.9626,1067.2064
         ASYMP=Fischel
+      }
+    }
+    level{
+      N=1
+      EE=0       
+      G=1
+      J=0
+      L=0
+      GL=0.0
+      bf{
+        TYPE=PHY
+        LAMBDA= 100
+        VALUE= 2.0E-21
       }
     }
   }
