--- a/cfg/invert.cfg
+++ b/cfg/invert.cfg
@@ -1,7 +1,7 @@
 atmos{
   ID=Simple Atmosphere
   TYPE=SPINOR
-  FILE=falc.dat
+  FILE=falc_31.dat
   GEOMETRY=PLANEPARALLEL
   RTSOLVER=Bezier
 #  ID=MuRAM snapshot
@@ -24,10 +24,10 @@ obs{
   ID=Obs 1
   EL=3.14159265359
   AZ=0.0
-  NAME=spectrum_sodium.dat
-  LAMBDA = 5895.0 - 5897.0
-  DLAMBDA = 0.02
-  INVERT=0
+  NAME=cube_test_2.f0
+  LAMBDA = 5887.7914658 - 5897.18400651
+  DLAMBDA = 0.00972312703583  
+  INVERT=1
   RETURN_ATMOS = 1
   RETURN_MODEL = 0
   XRANGE = 1,1
@@ -42,18 +42,18 @@ model{
   #FILENAME=mag_test_nodes_2.f0
   parameter{
   ID=TEMP
-  TAU=-5.0, -3.6,-2.2,-0.8, 0.4
-  VALUES=6000.0,5500.0, 5000.0, 4500.0, 7000.0
+  TAU=-5.0, -3.4,-1.8,-0.4, 0.6
+  VALUES=5000.0,5500.0,6000.0,6500.0,7000.0
   }
   parameter{
   ID=VT
   TAU=0
-  VALUES=0.5E5
+  VALUES=7.548005852066324e+04
   }
   parameter{
   ID=VS
   TAU=0
-  VALUES=1E5
+  VALUES=1.358474859394025e+05
   }
 }
 
