some changes to atomic models and atmos_fio. we are trying to make fitting with Fe+Ni+Na work.

--- a/cfg/nickel.cfg
+++ b/cfg/nickel.cfg
@@ -1,7 +1,7 @@
 atom{
   NAME=Nickel
   ID=Ni
-  Z=1
+  Z=2
   MASS=58.5934
   ABUND=1.65958690744e-06
   NLTE=0
@@ -41,7 +41,7 @@ atom{
       bf{
         TYPE=PHY
         LAMBDA= 100
-        VALUE=0.092E-19
+        VALUE=9.826E-18
       }
     }
     level{
@@ -50,17 +50,56 @@ atom{
       G=3
       J=2
       L=1
-      GL=0.0
-      A=3.9e+05
+      GL=1.0
+      A=8.7e+05
       bf{
         TYPE=PHY
         LAMBDA= 100
-        VALUE= 7.95E-19
+        VALUE= 1.546E-17
       }
     }
   }
   ion{
     CHARGE=1
+    EION=18.16857
+    partition{
+      TYPE=TRAV
+      G0=6
+      #
+      trav{
+        XION=18.147
+        G2=42
+        XL=9.0
+        GAMMA=0.191, 1.235, 3.358, 8.429, 17.096    
+        ALPHA=4.1421, 37.3781, 25.9712, 333.3397, 311.1633 
+        ASYMP=Fischel
+      }
+      #
+      trav{
+        XION=20.233
+        G2=18
+        XL=5.0
+        GAMMA=3.472, 9.065, 16.556  
+        ALPHA=33.1031, 184.1854, 136.7072   
+        ASYMP=Fischel
+      }
+    }
+    level{
+      N=1
+      EE=0     
+      G=1
+      J=0
+      L=0
+      GL=0.0
+      bf{
+        TYPE=PHY
+        LAMBDA= 100
+        VALUE=1.0E-18
+      }
+    }
+  }
+  ion{
+    CHARGE=2
     partition{
       TYPE=CONST
       VALUE=1.0
