--- a/cfg/invert.cfg
+++ b/cfg/invert.cfg
@@ -26,12 +26,12 @@ obs{
   AZ=0.0
   NAME=cube_test_2.f0
   LAMBDA = 5887.7914658 - 5897.18400651
-  DLAMBDA = 0.00972312703583  
+  DLAMBDA = 0.00972312703583
   INVERT=1
   RETURN_ATMOS = 1
   RETURN_MODEL = 0
-  XRANGE = 1,100
-  YRANGE = 1,100
+  XRANGE = 13,13
+  YRANGE = 13,13
   LRANGE = 495,967
   MASK = sodium_lines_mask.dat
 }
@@ -42,20 +42,41 @@ model{
   #FILENAME=mag_test_nodes_2.f0
   parameter{
   ID=TEMP
-  TAU=-5.0, -3.4,-1.8,-0.4, 0.6
-  VALUES=5000.0,5500.0,6000.0,6500.0,7000.0
+  TAU=-5.0,-3.9, -2.8,-1.7,-0.6, 0.5
+  VALUES=5000.0,5500.0,5700.0,6000.0,6500.0,7000.0
   }
   parameter{
   ID=VT
   TAU=0
-  VALUES=7.548005852066324e+04
+  VALUES=1E5
   }
   parameter{
   ID=VS
   TAU=0
-  VALUES=1.358474859394025e+05
+  VALUES=0E5
   }
 }
+
+model{
+  ID=Model 2
+  READ_FROM_FILE=0
+  parameter{
+  ID=TEMP
+  TAU=-5.0, -3.4,-1.8,-0.4, 0.6
+  VALUES=7000.0,6400.0,5500.0,4900.0,6800.0
+  }
+  parameter{
+  ID=VT
+  TAU=0
+  VALUES=0.5E5
+  }
+  parameter{
+  ID=VS
+  TAU=0
+  VALUES=1.6E5
+  }
+}
+
 
 #LAMBDA = 5895.0 - 5897.0
 #LAMBDA = 4339.4 - 4340.0
