--- a/cfg/invert.cfg
+++ b/cfg/invert.cfg
@@ -1,7 +1,7 @@
 atmos{
   ID=Simple Atmosphere
   TYPE=SPINOR
-  FILE=falc_31.dat
+  FILE=falc_36.dat
   GEOMETRY=PLANEPARALLEL
   RTSOLVER=Bezier
 #  ID=MuRAM snapshot
@@ -30,8 +30,8 @@ obs{
   INVERT=1
   RETURN_ATMOS = 1
   RETURN_MODEL = 0
-  XRANGE = 1,100
-  YRANGE = 1,100
+  XRANGE = 1,1
+  YRANGE = 1,1
   LRANGE = 495,967
   MASK = sodium_lines_mask.dat
 }
@@ -42,7 +42,7 @@ model{
   #FILENAME=mag_test_nodes_2.f0
   parameter{
   ID=TEMP
-  TAU=-5.0,-3.6, -2.2,-0.8,0.6
+  TAU=-4.0, -2.9, -1.8, -0.7, 0.4
   VALUES=5000.0,5500.0,5700.0,6000.0,6500.0
   }
   parameter{
