--- a/cfg/invert.cfg
+++ b/cfg/invert.cfg
@@ -30,19 +30,19 @@ obs{
   INVERT=1
   RETURN_ATMOS = 1
   RETURN_MODEL = 0
-  XRANGE = 1,1
-  YRANGE = 1,1
+  XRANGE = 1,100
+  YRANGE = 1,100
   LRANGE = 495,967
   MASK = sodium_lines_mask.dat
 }
 
 model{
   ID=Model 1
-  READ_FROM_FILE=0
-  #FILENAME=mag_test_nodes_2.f0
+  READ_FROM_FILE=1
+  FILENAME=/home/milic/inversion_code/tests/cubes/test_2_take_8/cyc2/4.0_mag_test_nodes.f0
   parameter{
   ID=TEMP
-  TAU=-4.0, -2.9, -1.8, -0.7, 0.4
+  TAU=-4.0, -3.0, -2.0, -1.0, 0.0
   VALUES=5000.0,5500.0,5700.0,6000.0,6500.0
   }
   parameter{
