some tests to see what is up with spectral lines

--- a/cfg/iron_5250.cfg
+++ b/cfg/iron_5250.cfg
@@ -4,6 +4,7 @@
   Z=2
   MASS=55.854
   ABUND=3.1622778e-05
+  NLTE = 0
 #
   ion{
     CHARGE=0
@@ -45,6 +46,11 @@
       G=5
       J=2
       L=0
+      bf{
+        TYPE=PHY
+        LAMBDA= 100
+        VALUE=0.092E-18
+      }
     }
      level{
       N=2
@@ -53,6 +59,11 @@
       J=1
       L=0
       A=1e+1
+      bf{
+        TYPE=PHY
+        LAMBDA= 100
+        VALUE=0.092E-18
+      }
     }
     level{
       N=3
@@ -61,6 +72,11 @@
       A=3.92e+02, 1e+1
       J=3
       L=1
+      bf{
+        TYPE=PHY
+        LAMBDA= 100
+        VALUE=0.092E-18
+      }
     }
     level{
       N=4
@@ -69,6 +85,11 @@
       A=1e+1, 9.30e+02, 1e+1
       J=1
       L=1
+      bf{
+        TYPE=PHY
+        LAMBDA= 100
+        VALUE=0.092E-18
+      }
     }
   }
   ion{
