--- a/cfg/iron_6300lines.cfg
+++ b/cfg/iron_6300lines.cfg
@@ -45,6 +45,11 @@ atom{
       G=5
       J=2
       L=1
+      bf{
+        TYPE=PHY
+        LAMBDA= 100
+        VALUE=0.092E-18
+      }
     }
      level{
       N=2
@@ -53,6 +58,11 @@ atom{
       J=2
       L=1
       A=1e+1
+      bf{
+        TYPE=PHY
+        LAMBDA= 100
+        VALUE=0.092E-18
+      }
     }
     level{
       N=3
@@ -61,6 +71,11 @@ atom{
       A=6.43e+06, 1e+1
       J=4
       L=0
+      bf{
+        TYPE=PHY
+        LAMBDA= 100
+        VALUE=0.092E-18
+      }
     }
     level{
       N=4
@@ -69,6 +84,11 @@ atom{
       A=1e+1, 6.43e+06, 1e+1
       J=0
       L=0
+      bf{
+        TYPE=PHY
+        LAMBDA= 100
+        VALUE=0.092E-18
+      }
     }
   }
   ion{
