sync, debugging these weak iron and nickel lines, trying to verify everything

--- a/cfg/atoms.cfg
+++ b/cfg/atoms.cfg
@@ -8,9 +8,9 @@ ATOM=oxygen.cfg
 ATOM=magnesium.cfg
 ATOM=calcium.cfg
 ATOM=silicon.cfg
-ATOM=iron_5250.cfg
-#ATOM=sodium.cfg
-#ATOM=nickel.cfg
+ATOM=iron_5892.cfg
+ATOM=sodium.cfg
+ATOM=nickel.cfg
 #ATOM=chromium.cfg
 #ATOM=strontium.cfg
 #ATOM=strontium_debug.cfg
