testing agreement between us and SPINOR/RH. Maybe also implementing another method for H- opacity computation. Stay tuned....

--- a/cfg/atoms.cfg
+++ b/cfg/atoms.cfg
@@ -8,7 +8,7 @@ ATOM=oxygen.cfg
 ATOM=magnesium.cfg
 ATOM=calcium.cfg
 ATOM=silicon.cfg
-ATOM=iron_5892.cfg
+ATOM=iron_6300lines.cfg
 ATOM=sodium.cfg
 ATOM=nickel.cfg
 #ATOM=chromium.cfg
