--- a/cfg/atoms.cfg
+++ b/cfg/atoms.cfg
@@ -8,9 +8,10 @@ ATOM=oxygen.cfg
 ATOM=magnesium.cfg
 ATOM=calcium.cfg
 ATOM=silicon.cfg
+ATOM=aluminium.cfg
 ATOM=iron_6300lines.cfg
-ATOM=sodium.cfg
-ATOM=nickel.cfg
+#ATOM=sodium.cfg
+#ATOM=nickel.cfg
 #ATOM=chromium.cfg
 #ATOM=strontium.cfg
 #ATOM=strontium_debug.cfg
