--- a/cfg/synth.cfg
+++ b/cfg/synth.cfg
@@ -16,7 +16,7 @@ atmos{
 #  DZ=20E3
   
   ATOM=atoms.cfg
-  MOL=mol.cfg
+  MOL=mol_part.cfg
 }
 
 #EL is actually pi - theta, in radians
@@ -25,7 +25,7 @@ obs{
   EL=3.14159265359
   AZ=0.0
   NAME=spectrum.dat
-  LAMBDA = 5892.0 - 5897.0
+  LAMBDA = 6301.0-6303.0
   DLAMBDA = 0.01
   INVERT=0
   RETURN_ATMOS = 1
@@ -34,27 +34,6 @@ obs{
   YRANGE = 1,3
   LRANGE = 495,967
   MASK = sodium_lines_mask.dat
-}
-
-model{
-  ID=Model 1
-  READ_FROM_FILE=0
-  #FILENAME=mag_test_nodes_2.f0
-  parameter{
-  ID=TEMP
-  TAU=-5.0, -3.4,-1.8,-0.4, 0.6
-  VALUES=5000.0,5500.0,6000.0,6500.0,7000.0
-  }
-  parameter{
-  ID=VT
-  TAU=0
-  VALUES=7.548005852066324e+04
-  }
-  parameter{
-  ID=VS
-  TAU=0
-  VALUES=1.358474859394025e+05
-  }
 }
 
 #LAMBDA = 5895.0 - 5897.0
