--- a/cfg/iron_5892.cfg
+++ b/cfg/iron_5892.cfg
@@ -60,11 +60,11 @@ atom{
       J=6
       L=0
       GL=2.0
-      A=3.9e+05
+      A=1.413e+05
       bf{
         TYPE=PHY
         LAMBDA= 100
-        VALUE= 7.95E-18
+        VALUE= 1.E-20
       }
     }
   }
@@ -93,7 +93,7 @@ atom{
       bf{
         TYPE=PHY
         LAMBDA= 100
-        VALUE= 1.0E-19
+        VALUE= 1.0E-20
       }
     }
   }
