--- a/cfg/synth.cfg
+++ b/cfg/synth.cfg
@@ -16,7 +16,7 @@ atmos{
 #  DZ=20E3
   
   ATOM=atoms.cfg
-  MOL=mol_part.cfg
+  MOL=mol.cfg
 }
 
 # EL is actually pi - theta, in radians
@@ -24,8 +24,8 @@ obs{
   ID=Obs 1
   EL=3.14159265359
   AZ=0.0
-  NAME=spectrum_5893.dat
-  LAMBDA = 5891.0-5895.0
+  NAME=spectrum.dat
+  LAMBDA = 5891.0-5897.0
   DLAMBDA = 0.01
   INVERT=0
   RETURN_ATMOS = 1
