--- a/cfg/synth.cfg
+++ b/cfg/synth.cfg
@@ -1,7 +1,7 @@
 atmos{
   ID=Simple Atmosphere
   TYPE=SPINOR
-  FILE=falc.dat
+  FILE=falc_21.dat
   GEOMETRY=PLANEPARALLEL
   RTSOLVER=Bezier
 #  ID=MuRAM snapshot
@@ -25,7 +25,7 @@ obs{
   EL=3.14159265359
   AZ=0.0
   NAME=spectrum.dat
-  LAMBDA = 5891.0-5897.0
+  LAMBDA = 5892.0-5894.0
   DLAMBDA = 0.01
   INVERT=0
   RETURN_ATMOS = 1
