debugging and sorting out opacity and opacity perturbation for H- from Gray.

--- a/cfg/atoms.cfg
+++ b/cfg/atoms.cfg
@@ -9,8 +9,8 @@ ATOM=magnesium.cfg
 ATOM=calcium.cfg
 ATOM=silicon.cfg
 ATOM=aluminium.cfg
-ATOM=iron.cfg
-#ATOM=nickel.cfg
+ATOM=iron_5892.cfg
+ATOM=nickel.cfg
 #ATOM=sodium.cfg
 #ATOM=chromium.cfg
 #ATOM=strontium.cfg
