--- a/cfg/synth.cfg
+++ b/cfg/synth.cfg
@@ -16,7 +16,7 @@ atmos{
 #  DZ=20E3
   
   ATOM=atoms.cfg
-#  MOL=mol.cfg
+  MOL=mol.cfg
 }
 
 # EL is actually pi - theta, in radians
@@ -25,8 +25,8 @@ obs{
   EL=3.14159265359
   AZ=0.0
   NAME=spectrum.dat
-  LAMBDA = 5893.0-5893.0
-  DLAMBDA = 1.0
+  LAMBDA = 5892.0-5894.0
+  DLAMBDA = 0.01
   INVERT=0
   RETURN_ATMOS = 1
   RETURN_MODEL = 0
