--- a/cfg/invert.cfg
+++ b/cfg/invert.cfg
@@ -32,18 +32,18 @@ obs{
   RETURN_MODEL = 0
   XRANGE = 1,100
   YRANGE = 1,100
-  LRANGE = 495,967
+  LRANGE = 650,967
   MASK = sodium_lines_mask.dat
 }
 
 model{
   ID=Model 1
-  READ_FROM_FILE=1
-  FILENAME=/home/milic/inversion_code/tests/cubes/test_2_take_8/cyc4/2.0_mag_test_nodes.f0
+  READ_FROM_FILE=0
+  # FILENAME=/home/milic/inversion_code/tests/cubes/test_2_take_8/cyc4/2.0_mag_test_nodes.f0
   parameter{
   ID=TEMP
-  TAU=-4.0, -3.0, -2.0, -1.0, 0.0
-  VALUES=5000.0,5500.0,5700.0,6000.0,6500.0
+  TAU=-3.5, -1.5, 0.0
+  VALUES=6000.0,4500.0,6500.0
   }
   parameter{
   ID=VT
