--- a/cfg/invert.cfg
+++ b/cfg/invert.cfg
@@ -42,8 +42,8 @@ model{
   # FILENAME=/home/milic/inversion_code/tests/cubes/test_2_take_8/cyc4/2.0_mag_test_nodes.f0
   parameter{
   ID=TEMP
-  TAU=-3.5, -1.5, 0.0
-  VALUES=6000.0,4500.0,6500.0
+  TAU=-4.0,-3.0,-2.0,-1.0,0.0
+  VALUES=5000.0,5500.0,6000.0,6500.0,7000.0
   }
   parameter{
   ID=VT
