--- a/cfg/invert.cfg
+++ b/cfg/invert.cfg
@@ -30,9 +30,9 @@ obs{
   INVERT=1
   RETURN_ATMOS = 1
   RETURN_MODEL = 0
-  XRANGE = 1,00
-  YRANGE = 1,00
-  LRANGE = 495,967
+  XRANGE = 1,100
+  YRANGE = 1,100
+  LRANGE = 495,630
   MASK = sodium_lines_mask.dat
 }
 
@@ -42,8 +42,8 @@ model{
   # FILENAME=/home/milic/inversion_code/tests/cubes/test_2_take_8/cyc4/2.0_mag_test_nodes.f0
   parameter{
   ID=TEMP
-  TAU=-4.0,-3.0,-2.0,-1.0,0.0
-  VALUES=5000.0,5500.0,6000.0,6500.0,7000.0
+  TAU=-3.0,-2.0,-1.0,0.0
+  VALUES=5500.0,5000.0,4500.0,6500.0
   }
   parameter{
   ID=VT
@@ -53,7 +53,7 @@ model{
   parameter{
   ID=VS
   TAU=0
-  VALUES=0E5
+  VALUES=1E5
   }
 }
 
