--- a/cfg/invert.cfg
+++ b/cfg/invert.cfg
@@ -24,7 +24,7 @@ obs{
   ID=Obs 1
   EL=3.14159265359
   AZ=0.0
-  NAME=cube_test_2.f0
+  NAME=cube_test_3.f0
   LAMBDA = 5887.7914658 - 5897.18400651
   DLAMBDA = 0.00972312703583
   INVERT=1
@@ -43,17 +43,32 @@ model{
   parameter{
   ID=TEMP
   TAU=-4.0,-3.0,-2.0,-1.0,0.0
-  VALUES=5500.0,5000.0,4500.0,6500.0,7000.0
+  VALUES=4800.0,5000.0,5200.0,5500.0,6000.0
   }
   parameter{
   ID=VT
   TAU=0
-  VALUES=1E5
+  VALUES=0.5E5
   }
   parameter{
   ID=VS
   TAU=0
-  VALUES=1E5
+  VALUES=0E5
+  }
+  parameter{
+  ID=B
+  TAU=0
+  VALUES=200.0
+  }
+  parameter{
+  ID=THETA
+  TAU=0
+  VALUES=30.0
+  }
+  parameter{
+  ID=PHI
+  TAU=0
+  VALUES=30.0
   }
 }
 
