Preparing for a new inversion of the whole small field

--- a/cfg/atoms.cfg
+++ b/cfg/atoms.cfg
@@ -12,6 +12,6 @@ ATOM=aluminium.cfg
 ATOM=iron_5892.cfg
 ATOM=nickel.cfg
 ATOM=sodium.cfg
-ATOM=chromium.cfg
+#ATOM=chromium.cfg
 #ATOM=strontium.cfg
 #ATOM=strontium_debug.cfg
