--- a/cfg/invert.cfg
+++ b/cfg/invert.cfg
@@ -1,7 +1,7 @@
 atmos{
   ID=Simple Atmosphere
   TYPE=SPINOR
-  FILE=falc_36.dat
+  FILE=falc_31.dat
   GEOMETRY=PLANEPARALLEL
   RTSOLVER=Bezier
 #  ID=MuRAM snapshot
@@ -31,8 +31,8 @@ obs{
   RETURN_ATMOS = 1
   RETURN_MODEL = 0
   XRANGE = 1,100
-  YRANGE = 1,100
-  LRANGE = 600,967
+  YRANGE = 1,00
+  LRANGE = 495,967
   MASK = sodium_lines_mask.dat
 }
 
@@ -43,22 +43,22 @@ model{
   parameter{
   ID=TEMP
   TAU=-4.0,-3.0,-2.0,-1.0,0.0
-  VALUES=4800.0,5000.0,5200.0,5500.0,6000.0
+  VALUES=6000.0,5500.0,4400.0,5700.0,6200.0
   }
   parameter{
   ID=VT
   TAU=0
-  VALUES=0.5E5
+  VALUES=1.5E5
   }
   parameter{
   ID=VS
-  TAU=0
-  VALUES=0E5
+  TAU=-5.0,1.0
+  VALUES=0.7E5,0.2E5
   }
   parameter{
   ID=B
-  TAU=0
-  VALUES=200.0
+  TAU=-4.0,-2.5,0.0
+  VALUES=200.0,300.0,500.0
   }
   parameter{
   ID=THETA
