- working with updated op/em (see one of the previous commits) - changed nodes after discussion with MvN: removed microturbulence, increased number of nodes in velocity, decreased in temperature

--- a/cfg/invert.cfg
+++ b/cfg/invert.cfg
@@ -38,27 +38,22 @@ obs{
 
 model{
   ID=Model 1
-  READ_FROM_FILE=1
-  FILENAME=1.0_mag_test_nodes.f0
+  READ_FROM_FILE=0
+  # FILENAME=3.0_mag_test_nodes.f0
   parameter{
   ID=TEMP
-  TAU=-4.0,-3.0,-2.0,-1.0,0.0
-  VALUES=6000.0,5500.0,4400.0,5700.0,6200.0
-  }
-  parameter{
-  ID=VT
-  TAU=0
-  VALUES=1.5E5
+  TAU=-3.5,-2.2,-1.0,0.0
+  VALUES=6000.0,5500.0,4400.0,6200.0
   }
   parameter{
   ID=VS
-  TAU=-5.0,1.0
-  VALUES=0.7E5,0.2E5
+  TAU=-5.0,-2.0,1.0
+  VALUES=0.7E5,0.5E5,0.2E5
   }
   parameter{
   ID=B
-  TAU=-4.0,-2.5,0.0
-  VALUES=200.0,300.0,500.0
+  TAU=-4.0,-2.5,-0.5
+  VALUES=300.0,400.0,500.0
   }
   parameter{
   ID=THETA
