Previous run of inversions returned some seriously madnote results. The left part of the image is full of ridonculous noise. We will save it as an illustration and simplify the inversion. - One vs node - 2 B nodes - Other things stay the same.

--- a/cfg/invert.cfg
+++ b/cfg/invert.cfg
@@ -30,8 +30,8 @@ obs{
   INVERT=1
   RETURN_ATMOS = 1
   RETURN_MODEL = 0
-  XRANGE = 1,100
-  YRANGE = 1,100
+  XRANGE = 1,1
+  YRANGE = 1,1
   LRANGE = 495,967
   MASK = sodium_lines_mask.dat
 }
@@ -47,13 +47,13 @@ model{
   }
   parameter{
   ID=VS
-  TAU=-5.0,-2.0,1.0
-  VALUES=0.7E5,0.5E5,0.2E5
+  TAU=0
+  VALUES=0.7E5
   }
   parameter{
   ID=B
-  TAU=-4.0,-2.5,-0.5
-  VALUES=300.0,400.0,500.0
+  TAU=-3.5,-1.0
+  VALUES=300.0,500.0
   }
   parameter{
   ID=THETA
