Another bad inversion attempt. What is wrong? Even more simple, just to see what comes up.

--- a/cfg/invert.cfg
+++ b/cfg/invert.cfg
@@ -30,8 +30,8 @@ obs{
   INVERT=1
   RETURN_ATMOS = 1
   RETURN_MODEL = 0
-  XRANGE = 1,1
-  YRANGE = 1,1
+  XRANGE = 1,100
+  YRANGE = 1,100
   LRANGE = 495,967
   MASK = sodium_lines_mask.dat
 }
@@ -42,8 +42,8 @@ model{
   # FILENAME=3.0_mag_test_nodes.f0
   parameter{
   ID=TEMP
-  TAU=-3.5,-2.2,-1.0,0.0
-  VALUES=6000.0,5500.0,4400.0,6200.0
+  TAU=-3.6,-2.4,-1.2,0.0
+  VALUES=5000.0,5500.0,6000.0,6500.0
   }
   parameter{
   ID=VS
@@ -52,8 +52,8 @@ model{
   }
   parameter{
   ID=B
-  TAU=-3.5,-1.0
-  VALUES=300.0,500.0
+  TAU=0
+  VALUES=400.0
   }
   parameter{
   ID=THETA
