--- a/cfg/strontium.cfg
+++ b/cfg/strontium.cfg
@@ -3,7 +3,7 @@
 atom{
   NAME=Strontium
   ID=Sr
-  Z=3
+  Z=2
   MASS=87.62
   ABUND=7.41310241301e-10
   NLTE = 1
@@ -58,17 +58,36 @@ atom{
       TYPE=CONST
       VALUE=1.0
     }
-  }
-  ion{
-    CHARGE=2
-    EION=40.25
-    partition{
-      TYPE=CONST
-      VALUE=1.0
+    level{
+      N=1
+      EE=0      
+      G=2
+      J=1
+      L=0
+      GL=1.0
+      bf{
+        TYPE=PHY
+        LAMBDA= 100
+        VALUE=5.6E-18
+      }
+    }
+    level{
+      N=2
+      EE=3.039677       
+      G=4
+      J=3
+      L=1
+      GL=1.0
+      A=1.41e+08
+      bf{
+        TYPE=PHY
+        LAMBDA= 100
+        VALUE= 1.5E-17
+      }
     }
   }
   ion{
-    CHARGE=3
+    CHARGE=2
     partition{
       TYPE=CONST
       VALUE=1.0
