adding back microturbulence...

--- a/cfg/invert.cfg
+++ b/cfg/invert.cfg
@@ -46,6 +46,11 @@ model{
   VALUES=5000.0,5500.0,6000.0,6500.0
   }
   parameter{
+  ID=VT
+  TAU=0
+  VALUES=0.7E5
+  }
+  parameter{
   ID=VS
   TAU=0
   VALUES=0.7E5
