--- a/cfg/invert.cfg
+++ b/cfg/invert.cfg
@@ -42,23 +42,23 @@ model{
   # FILENAME=3.0_mag_test_nodes.f0
   parameter{
   ID=TEMP
-  TAU=-3.6,-2.4,-1.2,0.0
-  VALUES=5000.0,5500.0,6000.0,6500.0
+  TAU=-4.0,-3.0,-2.0,-1.0,0.0
+  VALUES=6000.0,5500.0,4400.0,5700.0,6200.0
   }
   parameter{
   ID=VT
   TAU=0
-  VALUES=0.7E5
+  VALUES=1.5E5
   }
   parameter{
   ID=VS
-  TAU=0
-  VALUES=0.7E5
+  TAU=-5.0,1.0
+  VALUES=0.7E5,0.2E5
   }
   parameter{
   ID=B
-  TAU=0
-  VALUES=400.0
+  TAU=-4.0,-2.5,0.0
+  VALUES=200.0,300.0,500.0
   }
   parameter{
   ID=THETA
