Trying out if inversions work at least a bit decently. Still have to fix uninitialized values in mol.cc constructor

--- a/cfg/invert.cfg
+++ b/cfg/invert.cfg
@@ -16,7 +16,7 @@ atmos{
 #  DZ=20E3
   
   ATOM=atoms.cfg
-  MOL=mol.cfg
+  MOL=mol_part.cfg
 }
 
 #EL is actually pi - theta, in radians
@@ -30,8 +30,8 @@ obs{
   INVERT=1
   RETURN_ATMOS = 1
   RETURN_MODEL = 0
-  XRANGE = 10,10
-  YRANGE = 10,10
+  XRANGE = 1,10
+  YRANGE = 1,10
   LRANGE = 495,957
   MASK = sodium_lines_mask.dat
 }
