--- a/cfg/invert.cfg
+++ b/cfg/invert.cfg
@@ -30,8 +30,8 @@ obs{
   INVERT=1
   RETURN_ATMOS = 1
   RETURN_MODEL = 0
-  XRANGE = 1,10
-  YRANGE = 1,10
+  XRANGE = 1,100
+  YRANGE = 1,100
   LRANGE = 495,957
   MASK = sodium_lines_mask.dat
 }
@@ -42,23 +42,18 @@ model{
   # FILENAME=3.0_mag_test_nodes.f0
   parameter{
   ID=TEMP
-  TAU=-4.0,-3.0,-2.0,-1.0,0.0
-  VALUES=6000.0,5500.0,4400.0,5700.0,6200.0
-  }
-  parameter{
-  ID=VT
-  TAU=0
-  VALUES=1.5E5
+  TAU=-3.6,-2.4,-1.2,0.0
+  VALUES=6000.0,4400.0,5700.0,6200.0
   }
   parameter{
   ID=VS
-  TAU=-5.0,1.0
-  VALUES=0.7E5,0.2E5
+  TAU=0
+  VALUES=0.7E5
   }
   parameter{
   ID=B
-  TAU=-4.0,-2.5,0.0
-  VALUES=200.0,300.0,500.0
+  TAU=-3.5,-0.5
+  VALUES=200.0,500.0
   }
   parameter{
   ID=THETA
