Let's try smoothing now.

--- a/cfg/invert.cfg
+++ b/cfg/invert.cfg
@@ -1,7 +1,7 @@
 atmos{
   ID=Simple Atmosphere
   TYPE=SPINOR
-  FILE=falc_31.dat
+  FILE=falc_36.dat
   GEOMETRY=PLANEPARALLEL
   RTSOLVER=Bezier
 #  ID=MuRAM snapshot
@@ -16,7 +16,7 @@ atmos{
 #  DZ=20E3
   
   ATOM=atoms.cfg
-  MOL=mol_part.cfg
+  MOL=mol.cfg
 }
 
 #EL is actually pi - theta, in radians
