--- a/cfg/synth.cfg
+++ b/cfg/synth.cfg
@@ -25,8 +25,8 @@ obs{
   EL=3.14159265359
   AZ=0.0
   NAME=spectrum.dat
-  LAMBDA = 4077.0-4078.5
-  DLAMBDA = 0.005
+  LAMBDA = 5887.0 - 5897.0
+  DLAMBDA = 0.01
   INVERT=0
   RETURN_ATMOS = 1
   RETURN_MODEL = 0
@@ -48,6 +48,7 @@ obs{
 # LAMBDA = 6301.0 - 6303.0
 # LAMBDA = 5246.0 - 5251.0
 # LAMBDA = 15647.0 - 15654.0
+# LAMBDA = 4077.0-4078.5
 # EL=3.14159265359 # mu = 1
 # EL=1.7112577415047523 #mu = 0.14
 
