--- a/cfg/invert.cfg
+++ b/cfg/invert.cfg
@@ -38,21 +38,21 @@ obs{
 
 model{
   ID=Model 1
-  READ_FROM_FILE=0
-  FILENAME=/home/chappie/inv_code/tests/test_3_run_2/cyc1/2.0_mag_test_nodes.f0
+  READ_FROM_FILE=1
+  FILENAME=0.5_mag_test_nodes.f0
   parameter{
   ID=TEMP
-  TAU=-4.0,-2.4,-1.2,0.0
+  TAU=-3.5,-2.1,-1.0,0.0
   VALUES=6000.0,4400.0,5500.0,6200.0
   }
   parameter{
   ID=VS
-  TAU=-4.0,-2.8,-1.0
+  TAU=-3.5,-2.2,-1.0
   VALUES=1E5,0.5E5,-1E5
   }
   parameter{
   ID=B
-  TAU=-3.5,-2.0,-1.0
+  TAU=-3.5,-2.2,-1.0
   VALUES=300.0,400.0,500.0
   }
   parameter{
