--- a/cfg/iron_15650.cfg
+++ b/cfg/iron_15650.cfg
@@ -4,6 +4,7 @@ atom{
   Z=2
   MASS=55.854
   ABUND=3.1622778e-05
+  NLTE=0
 #
   ion{
     CHARGE=0
@@ -39,36 +40,94 @@ atom{
         ASYMP=Fischel
       }
     }
-    level{
+    level{ #line2 lower level, upper is N=2
       N=1
       EE=5.4260419
       G=3
-      J=1
+      J=2
       L=0
+      GL=0.0
     }
-     level{
+    level{ #line4 lower level, upper is N=7 
       N=2
+      EE=5.8279399
+      G=11
+      J=10
+      L=0
+      GL=0.0
+      A=1e+0
+    }
+    level{ #line 5 lower level, upper is N=
+      N=3
+      EE=5.9786822
+      G=3
+      J=2
+      L=0
+      GL=0.0
+      A=1e+0, 1e+0
+    }
+     level{ #line 2, upper level, lower is N=1
+      N=4
       EE=6.2181322
       G=3
-      J=1
+      J=2
       L=1
-      A=5.75E6
+      GL=0.0
+      A=1.94e+06,1e+0,1e+0
     }
-    level{
-      N=3
+    level{ #line 3, lower level, upper is N=9
+      N=5
       EE=6.2460645
       G=11
-      A=1e+1, 1e+1
-      J=5
+      J=10
       L=2
+      GL=0.0
+      A=1e+0, 1e+0,1e+0, 1e+0
     }
-    level{
-      N=4
+    level{ #line 1, lower level, upper is N=10
+      N=6
+      EE=6.3109410
+      G=5
+      J=4
+      L=1
+      GL=0.0
+      A=1e+0, 1e+0, 1e+0, 1e+0, 1e+0
+    }
+    level{ # line4, upper level, lower is N=2
+      N=7
+      EE=6.6193473
+      G=9
+      J=8
+      L=1
+      GL=0.0
+      A=1e+0,4.68e+06, 1e+0, 1e+0, 1e+0, 1e+0
+    }
+    level{ #line 5 upper level, lower is N=3
+      N=8
+      EE=6.7699265
+      G=3
+      J=2
+      L=1
+      GL=0.0
+      A=1e+0,1e+0,4.68e+06,1e+0,1e+0,1e+0,1e+0
+    }
+    level{ #line 3 upper level lower is N=5
+      N=9
       EE=7.0379341
       G=9
-      A=1e+1, 1e+1, 3.03e7
-      J=4
+      J=8
       L=3
+      GL=0.0
+      A=1e+0, 1e+0,1e+0, 1e+0,2.43e+06,1e+0,1e+0, 1e+0
+    }
+    level{ #line 1, upper level, lower is N=6
+      N=10
+      EE= 7.1032082
+      G=5
+      A=1e+0,1e+0,1e+0,1e+0,1e+0,1.21e+06,1e+0,1e+0,1e+0
+      J=4
+      L=2
+      GL=0.0
     }
   }
   ion{
