Few debugs, testing Iron IR lines and running inversion only for D1. Debugs: 1) absence of bf in atomic file is not handled properly 2) added computation of referent opacity in the atmos_rad_synthesis.cc, so now forward computation of responses on tau grid is handled properly    this was probably randomly deleted

--- a/cfg/invert.cfg
+++ b/cfg/invert.cfg
@@ -32,28 +32,28 @@ obs{
   RETURN_MODEL = 0
   XRANGE = 1,100
   YRANGE = 1,100
-  LRANGE = 495,957
+  LRANGE = 650,957
   MASK = sodium_lines_mask.dat
 }
 
 model{
   ID=Model 1
-  READ_FROM_FILE=1
+  READ_FROM_FILE=0
   FILENAME=0.5_mag_test_nodes.f0
   parameter{
   ID=TEMP
-  TAU=-3.5,-2.1,-1.0,0.0
-  VALUES=6000.0,4400.0,5500.0,6200.0
+  TAU=-3.0,-1.0,0.0
+  VALUES=4400.0,5500.0,6200.0
   }
   parameter{
   ID=VS
-  TAU=-3.5,-2.2,-1.0
-  VALUES=1E5,0.5E5,-1E5
+  TAU=-3.5,-1.0
+  VALUES=1E5,-1E5
   }
   parameter{
   ID=B
-  TAU=-3.5,-2.2,-1.0
-  VALUES=300.0,400.0,500.0
+  TAU=-3.5,-1.0
+  VALUES=300.0,500.0
   }
   parameter{
   ID=THETA
