--- a/cfg/iron_15650.cfg
+++ b/cfg/iron_15650.cfg
@@ -40,7 +40,7 @@ atom{
         ASYMP=Fischel
       }
     }
-    level{ #line2 lower level, upper is N=2
+    level{ 
       N=1
       EE=5.4260419
       G=3
@@ -48,7 +48,7 @@ atom{
       L=0
       GL=0.0
     }
-    level{ #line4 lower level, upper is N=7 
+    level{ 
       N=2
       EE=5.8279399
       G=11
@@ -57,7 +57,7 @@ atom{
       GL=0.0
       A=1e+0
     }
-    level{ #line 5 lower level, upper is N=
+    level{ 
       N=3
       EE=5.9786822
       G=3
@@ -66,7 +66,7 @@ atom{
       GL=0.0
       A=1e+0, 1e+0
     }
-     level{ #line 2, upper level, lower is N=1
+     level{ 
       N=4
       EE=6.2181322
       G=3
@@ -75,7 +75,7 @@ atom{
       GL=0.0
       A=1.94e+06,1e+0,1e+0
     }
-    level{ #line 3, lower level, upper is N=9
+    level{ 
       N=5
       EE=6.2460645
       G=11
@@ -84,7 +84,7 @@ atom{
       GL=0.0
       A=1e+0, 1e+0,1e+0, 1e+0
     }
-    level{ #line 1, lower level, upper is N=10
+    level{ 
       N=6
       EE=6.3109410
       G=5
@@ -93,7 +93,7 @@ atom{
       GL=0.0
       A=1e+0, 1e+0, 1e+0, 1e+0, 1e+0
     }
-    level{ # line4, upper level, lower is N=2
+    level{ 
       N=7
       EE=6.6193473
       G=9
@@ -102,7 +102,7 @@ atom{
       GL=0.0
       A=1e+0,4.68e+06, 1e+0, 1e+0, 1e+0, 1e+0
     }
-    level{ #line 5 upper level, lower is N=3
+    level{ 
       N=8
       EE=6.7699265
       G=3
@@ -111,7 +111,7 @@ atom{
       GL=0.0
       A=1e+0,1e+0,4.68e+06,1e+0,1e+0,1e+0,1e+0
     }
-    level{ #line 3 upper level lower is N=5
+    level{ 
       N=9
       EE=7.0379341
       G=9
@@ -120,14 +120,14 @@ atom{
       GL=0.0
       A=1e+0, 1e+0,1e+0, 1e+0,2.43e+06,1e+0,1e+0, 1e+0
     }
-    level{ #line 1, upper level, lower is N=6
+    level{ 
       N=10
       EE= 7.1032082
       G=5
-      A=1e+0,1e+0,1e+0,1e+0,1e+0,1.21e+06,1e+0,1e+0,1e+0
       J=4
       L=2
       GL=0.0
+      A=1e+0,1e+0,1e+0,1e+0,1e+0,1.21e+06,1e+0,1e+0,1e+0
     }
   }
   ion{
