working again! testing and tuning inversion for Sodium line

--- a/cfg/invert.cfg
+++ b/cfg/invert.cfg
@@ -24,7 +24,7 @@ obs{
   ID=Obs 1
   EL=3.14159265359
   AZ=0.0
-  NAME=cube_test_3_ct.f0
+  NAME=mag_region_450_70.f0
   LAMBDA = 5887.7914658 - 5897.18400651
   DLAMBDA = 0.00972312703583
   INVERT=1
@@ -39,21 +39,21 @@ obs{
 model{
   ID=Model 1
   READ_FROM_FILE=0
-  FILENAME=0.5_mag_test_nodes.f0
+  FILENAME=/home/milic/inversion_code/tests/cubes/Test_1/Run_3_T3_V3_B3/c2/2.0_mag_test_nodes.f0
   parameter{
   ID=TEMP
-  TAU=-3.0,-1.0,0.0
-  VALUES=4400.0,5500.0,6200.0
+  TAU=-2.2,-1.0,0.0
+  VALUES=5500.0,5200.0,6200.0
   }
   parameter{
   ID=VS
-  TAU=-3.5,-1.0
-  VALUES=1E5,-1E5
+  TAU=-3.5,-2.0,-0.5
+  VALUES=1E5,-0.5E5,-1E5
   }
   parameter{
   ID=B
-  TAU=-3.5,-1.0
-  VALUES=2000.0,3000.0
+  TAU=-3.5,-2.0,-0.5
+  VALUES=1500.0,1200.0,1000.0
   }
   parameter{
   ID=THETA
