--- a/cfg/invert_ir_iron.cfg
+++ b/cfg/invert_ir_iron.cfg
@@ -24,16 +24,16 @@ obs{
   ID=Obs 1
   EL=3.14159265359
   AZ=0.0
-  NAME=mag_region_401_800_0_139.f0
-  LAMBDA = 5887.7914658 - 5897.18400651
-  DLAMBDA = 0.00972312703583
+  NAME=GRIS_obs_test.f0
+  LAMBDA = 15640.72548185 - 15681.22178553
+  DLAMBDA = 0.0401350879074
   INVERT=1
   RETURN_ATMOS = 1
   RETURN_MODEL = 0
-  XRANGE = 1,400
-  YRANGE = 1,140
-  LRANGE = 650,957
-  MASK = sodium_lines_mask.dat
+  XRANGE = 1,100
+  YRANGE = 1,100
+  LRANGE = 88,635
+  MASK = ir_lines_mask.dat
 }
 
 model{
@@ -42,18 +42,18 @@ model{
   FILENAME=/home/milic/inversion_code/tests/cubes/Test_1/Run_4_T3_V3_B3/c2/0.5_mag_test_nodes.f0
   parameter{
   ID=TEMP
-  TAU=-2.4,-1.6,-0.8,0.0
-  VALUES=5500.0,4800.0,5200.0,6200.0
+  TAU=-1.6,-0.6,0.4
+  VALUES=5500.0,4800.0,6600.0
   }
   parameter{
   ID=VS
-  TAU=-3.5,-2.5,-0.5
-  VALUES=1E5,0.5E5,-0.5E5
+  TAU=0
+  VALUES=1E5
   }
   parameter{
   ID=B
-  TAU=-3.5,-2.0,-0.5
-  VALUES=1500.0,1300.0,1200.0
+  TAU=0
+  VALUES=1000.0
   }
   parameter{
   ID=THETA
