--- a/cfg/synth.cfg
+++ b/cfg/synth.cfg
@@ -24,9 +24,9 @@ obs{
   ID=Obs 1
   EL=3.14159265359
   AZ=0.0
-  NAME=spectrum.dat
-  LAMBDA = 15643.0 - 15667.0
-  DLAMBDA = 0.03
+  NAME=spectrum_15653.dat
+  LAMBDA = 15638.0-15668.0
+  DLAMBDA = 0.02
   INVERT=0
   RETURN_ATMOS = 1
   RETURN_MODEL = 0
