--- a/cfg/invert_ir_iron.cfg
+++ b/cfg/invert_ir_iron.cfg
@@ -1,7 +1,7 @@
 atmos{
   ID=Simple Atmosphere
   TYPE=SPINOR
-  FILE=falc_36.dat
+  FILE=falc_21.dat
   GEOMETRY=PLANEPARALLEL
   RTSOLVER=Bezier
 #  ID=MuRAM snapshot
@@ -30,9 +30,9 @@ obs{
   INVERT=1
   RETURN_ATMOS = 1
   RETURN_MODEL = 0
-  XRANGE = 1,100
-  YRANGE = 1,100
-  LRANGE = 88,635
+  XRANGE = 1,1
+  YRANGE = 1,1
+  LRANGE = 88,88
   MASK = ir_lines_mask.dat
 }
 
@@ -46,19 +46,14 @@ model{
   VALUES=5500.0,4800.0,6600.0
   }
   parameter{
-  ID=VS
+  ID=VT
   TAU=0
   VALUES=1E5
   }
   parameter{
-  ID=B
+  ID=VS
   TAU=0
-  VALUES=1000.0
-  }
-  parameter{
-  ID=THETA
-  TAU=0
-  VALUES=-75.0
+  VALUES=1E5
   }
 }
 
