--- a/cfg/synth.cfg
+++ b/cfg/synth.cfg
@@ -1,7 +1,7 @@
 atmos{
   ID=Simple Atmosphere
   TYPE=SPINOR
-  FILE=falc.dat
+  FILE=falc_low.dat
   GEOMETRY=PLANEPARALLEL
   RTSOLVER=Bezier
 #  ID=MuRAM snapshot
@@ -25,8 +25,8 @@ obs{
   EL=3.14159265359
   AZ=0.0
   NAME=spectrum_15653.dat
-  LAMBDA = 15638.0-15668.0
-  DLAMBDA = 0.02
+  LAMBDA = 15640.0-15665.0
+  DLAMBDA = 0.05
   INVERT=0
   RETURN_ATMOS = 1
   RETURN_MODEL = 0
