implementing an option to read in 3D spinor atmospheres (column by column) just figure out a way to do it

--- a/cfg/invert_ir_iron.cfg
+++ b/cfg/invert_ir_iron.cfg
@@ -1,7 +1,7 @@
 atmos{
   ID=Simple Atmosphere
   TYPE=SPINOR
-  FILE=falc_21.dat
+  FILE=falc_31.dat
   GEOMETRY=PLANEPARALLEL
   RTSOLVER=Bezier
 #  ID=MuRAM snapshot
@@ -30,9 +30,9 @@ obs{
   INVERT=1
   RETURN_ATMOS = 1
   RETURN_MODEL = 0
-  XRANGE = 1,1
-  YRANGE = 1,1
-  LRANGE = 88,88
+  XRANGE = 1,100
+  YRANGE = 1,100
+  LRANGE = 88,635
   MASK = ir_lines_mask.dat
 }
 
@@ -42,7 +42,7 @@ model{
   FILENAME=/home/milic/inversion_code/tests/cubes/Test_1/Run_4_T3_V3_B3/c2/0.5_mag_test_nodes.f0
   parameter{
   ID=TEMP
-  TAU=-1.6,-0.6,0.4
+  TAU=-2.0,-0.6,0.3
   VALUES=5500.0,4800.0,6600.0
   }
   parameter{
@@ -52,8 +52,8 @@ model{
   }
   parameter{
   ID=VS
-  TAU=0
-  VALUES=1E5
+  TAU=-2.0,-1.0,0.0
+  VALUES=1E5,0,-1E5
   }
 }
 
