--- a/cfg/test_invert.cfg
+++ b/cfg/test_invert.cfg
@@ -1,19 +1,9 @@
 atmos{
   ID=Simple Atmosphere
-  TYPE=SPINOR
-  FILE=falc_36.dat
+  TYPE=SPINOR3D
+  FILE=BIFROST_en024048_bin_4x4.f0
   GEOMETRY=PLANEPARALLEL
   RTSOLVER=Bezier
-#  ID=MuRAM snapshot
-#  TYPE=MuRAM
-#  FILE=000000
-#  GEOMETRY=CARTESIAN3D
-#  NX=288
-#  NY=192
-#  NZ=288
-#  DX=20E3
-#  DY=12E3
-#  DZ=20E3
   
   ATOM=atoms.cfg
   MOL=mol.cfg
@@ -24,14 +14,14 @@ obs{
   ID=Obs 1
   EL=3.14159265359
   AZ=0.0
-  NAME=c_mag_region_401_800_0_139.f0
-  LAMBDA = 5887.7914658 - 5897.18400651
-  DLAMBDA = 0.00972312703583
-  INVERT=1
+  NAME=BIFROST_en024048_bin_4x4_synth.f0
+  LAMBDA = 5892.0 - 5897.0
+  DLAMBDA = 0.01
+  INVERT=0
   RETURN_ATMOS = 1
   RETURN_MODEL = 0
-  XRANGE = 1,400
-  YRANGE = 1,140
+  XRANGE = 1,2
+  YRANGE = 1,2
   LRANGE = 650,957
   MASK = sodium_lines_mask.dat
   SCATTERED_LIGHT = 0.04
@@ -43,7 +33,7 @@ obs{
 
 model{
   ID=Model 1
-  READ_FROM_FILE=1
+  READ_FROM_FILE=0
   FILENAME=/home/milic/inversion_code/results/Na_2016-07-03/401_800_0_139/C2/mag_test_nodes_smeared_1.0.f0
   parameter{
   ID=TEMP
