--- a/cfg/atoms.cfg
+++ b/cfg/atoms.cfg
@@ -9,9 +9,9 @@ ATOM=magnesium.cfg
 ATOM=calcium.cfg
 ATOM=silicon.cfg
 ATOM=aluminium.cfg
-ATOM=iron_15650.cfg
+ATOM=iron.cfg
 # ATOM=strontium.cfg
 # ATOM=nickel.cfg
-# ATOM=sodium.cfg
+ATOM=sodium.cfg
 # ATOM=chromium.cfg
 # ATOM=strontium_debug.cfg
