--- a/cfg/test_invert.cfg
+++ b/cfg/test_invert.cfg
@@ -1,7 +1,7 @@
 atmos{
   ID=Simple Atmosphere
-  TYPE=SPINOR3D
-  FILE=BIFROST_en024048_bin_4x4.f0
+  TYPE=SPINOR
+  FILE=falc.dat
   GEOMETRY=PLANEPARALLEL
   RTSOLVER=Bezier
   
