--- a/cfg/invert.cfg
+++ b/cfg/invert.cfg
@@ -24,14 +24,14 @@ obs{
   ID=Obs 1
   EL=3.14159265359
   AZ=0.0
-  NAME=c_mag_region_401_800_0_139.f0
+  NAME=cube_test_3.f0
   LAMBDA = 5887.7914658 - 5897.18400651
   DLAMBDA = 0.00972312703583
   INVERT=1
   RETURN_ATMOS = 1
   RETURN_MODEL = 0
-  XRANGE = 1,400
-  YRANGE = 1,140
+  XRANGE = 1,10
+  YRANGE = 1,10
   LRANGE = 650,957
   MASK = sodium_lines_mask.dat
   SCATTERED_LIGHT = 0.04
@@ -43,7 +43,7 @@ obs{
 
 model{
   ID=Model 1
-  READ_FROM_FILE=1
+  READ_FROM_FILE=0
   FILENAME=/home/milic/inversion_code/results/Na_2016-07-03/401_800_0_139/C2/mag_test_nodes_smeared_1.0.f0
   parameter{
   ID=TEMP
