--- a/cfg/test_invert.cfg
+++ b/cfg/test_invert.cfg
@@ -1,7 +1,7 @@
 atmos{
   ID=Simple Atmosphere
-  TYPE=SPINOR
-  FILE=falc.dat
+  TYPE=SPINOR3D
+  FILE=BIFROST_en024048_bin_4x4.f0
   GEOMETRY=PLANEPARALLEL
   RTSOLVER=Bezier
   
@@ -14,8 +14,8 @@ obs{
   ID=Obs 1
   EL=3.14159265359
   AZ=0.0
-  NAME=BIFROST_en024048_bin_4x4_synth.f0
-  LAMBDA = 5892.0 - 5897.0
+  NAME=testing.dat
+  LAMBDA = 5894.5 - 5897.5
   DLAMBDA = 0.01
   INVERT=0
   RETURN_ATMOS = 1
