--- a/cfg/test_invert.cfg
+++ b/cfg/test_invert.cfg
@@ -4,7 +4,6 @@ atmos{
   FILE=BIFROST_en024048_bin_4x4.f0
   GEOMETRY=PLANEPARALLEL
   RTSOLVER=Bezier
-  
   ATOM=atoms.cfg
   MOL=mol.cfg
 }
@@ -14,14 +13,14 @@ obs{
   ID=Obs 1
   EL=3.14159265359
   AZ=0.0
-  NAME=testing.dat
+  NAME=BIFROST_en024048_bin_4x4_synth.f0
   LAMBDA = 5894.5 - 5897.5
   DLAMBDA = 0.01
   INVERT=0
   RETURN_ATMOS = 1
   RETURN_MODEL = 0
-  XRANGE = 1,2
-  YRANGE = 1,2
+  XRANGE = 1,126
+  YRANGE = 1,126
   LRANGE = 650,957
   MASK = sodium_lines_mask.dat
   SCATTERED_LIGHT = 0.04
