Testing cube synthesis/inversion

--- a/cfg/atoms.cfg
+++ b/cfg/atoms.cfg
@@ -11,7 +11,7 @@ ATOM=silicon.cfg
 ATOM=aluminium.cfg
 ATOM=iron_5892.cfg
 # ATOM=strontium.cfg
- ATOM=nickel.cfg
-# ATOM=sodium.cfg
+ATOM=nickel.cfg
+ATOM=sodium.cfg
 # ATOM=chromium.cfg
 # ATOM=strontium_debug.cfg
