setttin up full wavelength range inversion

--- a/cfg/test_invert.cfg
+++ b/cfg/test_invert.cfg
@@ -1,7 +1,7 @@
 atmos{
   ID=Simple Atmosphere
   TYPE=SPINOR3D
-  FILE=BIFROST_en024048_bin_1x1.f0
+  FILE=20161029.100G.ngrey.288x100x288.f0
   GEOMETRY=PLANEPARALLEL
   RTSOLVER=Bezier
   ATOM=atoms.cfg
@@ -13,14 +13,14 @@ obs{
   ID=Obs 1
   EL=3.14159265359
   AZ=0.0
-  NAME=BIFROST_en024048_bin_1x1_synth.f0
-  LAMBDA = 5892.0 - 5897.0
-  DLAMBDA = 0.01
+  NAME=20161029.100G.ngrey.288x100x288_synth.f0
+  LAMBDA = 5892.3 - 5893.3
+  DLAMBDA = 0.005
   INVERT=0
   RETURN_ATMOS = 1
   RETURN_MODEL = 0
-  XRANGE = 1,200
-  YRANGE = 1,200
+  XRANGE = 1,288
+  YRANGE = 1,288
   LRANGE = 650,957
   MASK = sodium_lines_mask.dat
   SCATTERED_LIGHT = 0.04
