--- a/cfg/invert.cfg
+++ b/cfg/invert.cfg
@@ -24,17 +24,17 @@ obs{
   ID=Obs 1
   EL=3.14159265359
   AZ=0.0
-  NAME=cube_test_3.f0
+  NAME=/home/milic/inversion_code/data_to_invert/mag_region_401_800_0_139.f0
   LAMBDA = 5887.7914658 - 5897.18400651
   DLAMBDA = 0.00972312703583
   INVERT=1
   RETURN_ATMOS = 1
   RETURN_MODEL = 0
-  XRANGE = 1,10
-  YRANGE = 1,10
-  LRANGE = 650,957
+  XRANGE = 1,400
+  YRANGE = 1,140
+  LRANGE = 1,957
   MASK = sodium_lines_mask.dat
-  SCATTERED_LIGHT = 0.04
+  SCATTERED_LIGHT = 0.05
   SPECTRAL_BROADENING = 50
   OBSERVED_CONTINUUM = 28.69
   CGS_CONTINUUM = 3.275E14
@@ -47,8 +47,8 @@ model{
   FILENAME=/home/milic/inversion_code/results/Na_2016-07-03/401_800_0_139/C2/mag_test_nodes_smeared_1.0.f0
   parameter{
   ID=TEMP
-  TAU=-2.6,-1.6,-0.7,0.0
-  VALUES=5500.0,4800.0,5200.0,6200.0
+  TAU=-2.2,-0.9,0.0
+  VALUES=4800.0,5200.0,6200.0
   }
   parameter{
   ID=VS
@@ -57,7 +57,7 @@ model{
   }
   parameter{
   ID=B
-  TAU=-3.5,-1.7,-0.5
+  TAU=-3.0,-1.7,-0.5
   VALUES=1500.0,1300.0,1200.0
   }
   parameter{
