--- a/cfg/invert.cfg
+++ b/cfg/invert.cfg
@@ -43,12 +43,12 @@ obs{
 
 model{
   ID=Model 1
-  READ_FROM_FILE=0
-  FILENAME=/home/milic/inversion_code/results/Na_2016-07-03/401_800_0_139/C2/mag_test_nodes_smeared_1.0.f0
+  READ_FROM_FILE=1
+  FILENAME=inverted_nodes_2.0.f0
   parameter{
   ID=TEMP
-  TAU=-2.2,-0.9,0.0
-  VALUES=4800.0,5200.0,6200.0
+  TAU=-2.7,-1.8,-0.9,0.0
+  VALUES=5600.0,4800.0,5200.0,6200.0
   }
   parameter{
   ID=VS
