--- a/cfg/sodium.cfg
+++ b/cfg/sodium.cfg
@@ -52,12 +52,26 @@ atom{
     }
     level{
       N=3
+      EE=2.104429184       
+      G=4
+      J=3
+      L=1
+      GL=1.33333
+      A=6.16e+07,1.0e+0
+      bf{
+        TYPE=PHY
+        LAMBDA= 100
+        VALUE= 7.95E-18
+      }
+    }
+    level{
+      N=4
       EE=3.1913531       
       G=2
       J=0
       L=0
       GL=0.0
-      A=1.0e+00, 8.8e+06
+      A=1.0e+00, 8.8e+06, 8.8e+06
       bf{
         TYPE=PHY
         LAMBDA= 100
@@ -65,17 +79,17 @@ atom{
       }
     }
     level{
-      N=4
-      EE=3.6169770       
-      G=4
+      N=5
+      EE=3.6169708       
+      G=10
       J=0
       L=2
       GL=0.0
-      A=1.0e+00,4.29e+07,1.0e+00
+      A=1.0e+00,4.29e+07,4.29e+07, 1.0e+00
       bf{
         TYPE=PHY
         LAMBDA= 100
-        VALUE= 0.54E-18
+        VALUE= 19.0E-18
       }
     }
   }
