Preparing to invert synthetic data

--- a/cfg/invert.cfg
+++ b/cfg/invert.cfg
@@ -24,19 +24,19 @@ obs{
   ID=Obs 1
   EL=3.14159265359
   AZ=0.0
-  NAME=/home/milic/inversion_code/data_to_invert/mag_region_401_800_0_139.f0
-  LAMBDA = 5887.7914658 - 5897.18400651
-  DLAMBDA = 0.00972312703583
+  NAME=/home/milic/inversion_code/results/BIFROST_cube_take_2/BIFROST_en024048_bin_1x1_synth.f0
+  LAMBDA = 5893.0 - 5897.0
+  DLAMBDA = 0.01
   INVERT=1
   RETURN_ATMOS = 1
   RETURN_MODEL = 0
-  XRANGE = 1,400
-  YRANGE = 1,140
+  XRANGE = 1,200
+  YRANGE = 1,200
   LRANGE = 1,957
   MASK = sodium_lines_mask.dat
-  SCATTERED_LIGHT = 0.05
-  SPECTRAL_BROADENING = 50
-  OBSERVED_CONTINUUM = 28.69
+  SCATTERED_LIGHT = 0.00
+  SPECTRAL_BROADENING = 1.0
+  OBSERVED_CONTINUUM = 3.275E14
   CGS_CONTINUUM = 3.275E14
 }
 
@@ -47,7 +47,7 @@ model{
   FILENAME=inverted_nodes_2.0.f0
   parameter{
   ID=TEMP
-  TAU=-2.7,-1.8,-0.9,0.0
+  TAU=-3.4,-2.0,-0.8,0.0
   VALUES=5600.0,4800.0,5200.0,6200.0
   }
   parameter{
