added some python routines and synced atmos.fit

--- a/cfg/atoms.cfg
+++ b/cfg/atoms.cfg
@@ -12,6 +12,6 @@ ATOM=aluminium.cfg
 ATOM=iron_5892.cfg
 # ATOM=strontium.cfg
 ATOM=nickel.cfg
-ATOM=sodium.cfg
+ATOM=sodium_D1.cfg
 # ATOM=chromium.cfg
 # ATOM=strontium_debug.cfg
