--- a/cfg/invert.cfg
+++ b/cfg/invert.cfg
@@ -24,19 +24,19 @@ obs{
   ID=Obs 1
   EL=3.14159265359
   AZ=0.0
-  NAME=/home/milic/inversion_code/results/BIFROST_cube_take_2/BIFROST_en024048_bin_1x1_synth.f0
-  LAMBDA = 5893.0 - 5897.0
-  DLAMBDA = 0.01
+  NAME=/home/milic/inversion_code/data_to_invert/mag_region_401_800_0_139.f0
+  LAMBDA = 5887.7914658 - 5897.18400651
+  DLAMBDA = 0.00972312703583
   INVERT=1
   RETURN_ATMOS = 1
   RETURN_MODEL = 0
-  XRANGE = 1,200
-  YRANGE = 1,200
+  XRANGE = 1,1
+  YRANGE = 1,1
   LRANGE = 1,957
   MASK = sodium_lines_mask.dat
-  SCATTERED_LIGHT = 0.00
-  SPECTRAL_BROADENING = 1.0
-  OBSERVED_CONTINUUM = 3.275E14
+  SCATTERED_LIGHT = 0.05
+  SPECTRAL_BROADENING = 50.0
+  OBSERVED_CONTINUUM = 28.4
   CGS_CONTINUUM = 3.275E14
 }
 
