developing nodeless inversion - first corrections (bad of course)

--- a/cfg/invert.cfg
+++ b/cfg/invert.cfg
@@ -1,7 +1,7 @@
 atmos{
   ID=Simple Atmosphere
   TYPE=SPINOR
-  FILE=falc_36.dat
+  FILE=falc.dat
   GEOMETRY=PLANEPARALLEL
   RTSOLVER=Bezier
 #  ID=MuRAM snapshot
@@ -32,7 +32,7 @@ obs{
   RETURN_MODEL = 0
   XRANGE = 1,1
   YRANGE = 1,1
-  LRANGE = 1,957
+  LRANGE = 650,957
   MASK = sodium_lines_mask.dat
   SCATTERED_LIGHT = 0.05
   SPECTRAL_BROADENING = 50.0
@@ -43,7 +43,7 @@ obs{
 
 model{
   ID=Model 1
-  READ_FROM_FILE=1
+  READ_FROM_FILE=0
   FILENAME=inverted_nodes_2.0.f0
   parameter{
   ID=TEMP
