Syncing work and home, messed up something. At home : developing nodeless inversion At work : preparing results for Fachberait

--- a/cfg/invert.cfg
+++ b/cfg/invert.cfg
@@ -24,7 +24,7 @@ obs{
   ID=Obs 1
   EL=3.14159265359
   AZ=0.0
-  NAME=/home/milic/inversion_code/data_to_invert/mag_region_401_800_0_139.f0
+  NAME=cube_test_3.f0
   LAMBDA = 5887.7914658 - 5897.18400651
   DLAMBDA = 0.00972312703583
   INVERT=1
