some technical changes in plotting functions reverted back the interpolation so that out of node range the quantity is flat (derivative is zero)

--- a/cfg/invert.cfg
+++ b/cfg/invert.cfg
@@ -1,7 +1,7 @@
 atmos{
   ID=Simple Atmosphere
   TYPE=SPINOR
-  FILE=falc.dat
+  FILE=falc_36.dat
   GEOMETRY=PLANEPARALLEL
   RTSOLVER=Bezier
 #  ID=MuRAM snapshot
@@ -24,15 +24,15 @@ obs{
   ID=Obs 1
   EL=3.14159265359
   AZ=0.0
-  NAME=cube_test_3.f0
+  NAME=/home/milic/inversion_code/data_to_invert/mag_region_401_800_0_139.f0
   LAMBDA = 5887.7914658 - 5897.18400651
   DLAMBDA = 0.00972312703583
   INVERT=1
   RETURN_ATMOS = 1
   RETURN_MODEL = 0
-  XRANGE = 1,1
-  YRANGE = 1,1
-  LRANGE = 650,957
+  XRANGE = 1,400
+  YRANGE = 1,140
+  LRANGE = 1,957
   MASK = sodium_lines_mask.dat
   SCATTERED_LIGHT = 0.05
   SPECTRAL_BROADENING = 50.0
@@ -43,11 +43,11 @@ obs{
 
 model{
   ID=Model 1
-  READ_FROM_FILE=0
-  FILENAME=inverted_nodes_2.0.f0
+  READ_FROM_FILE=1
+  FILENAME=/home/milic/inversion_code/results/Na_2016-07-03/401_800_0_139_full/C1/inverted_nodes_2.0.f0
   parameter{
   ID=TEMP
-  TAU=-3.4,-2.0,-0.8,0.0
+  TAU=-2.9,-1.7,-0.7,0.0
   VALUES=5600.0,4800.0,5200.0,6200.0
   }
   parameter{
