Syncing all the nodeless thins done with AAR

--- a/cfg/nodeless_invert.cfg
+++ b/cfg/nodeless_invert.cfg
@@ -1,7 +1,7 @@
 atmos{
   ID=Simple Atmosphere
   TYPE=SPINOR
-  FILE=falc.dat
+  FILE=simple_initial_32_v.dat
   GEOMETRY=PLANEPARALLEL
   RTSOLVER=Bezier
 #  ID=MuRAM snapshot
@@ -24,30 +24,30 @@ obs{
   ID=Obs 1
   EL=3.14159265359
   AZ=0.0
-  NAME=cube_test_3.f0
-  LAMBDA = 5887.7914658 - 5897.18400651
-  DLAMBDA = 0.00972312703583
+  NAME=/home/chappie/inv_code/scratch/falc_6300_1E-2.f0
+  LAMBDA = 6301.0 - 6303.0
+  DLAMBDA = 0.01
   INVERT=1
   RETURN_ATMOS = 1
   RETURN_MODEL = 0
   XRANGE = 1,1
   YRANGE = 1,1
-  LRANGE = 650,957
-  MASK = sodium_lines_mask.dat
-  SCATTERED_LIGHT = 0.05
-  SPECTRAL_BROADENING = 50.0
-  OBSERVED_CONTINUUM = 28.4
-  CGS_CONTINUUM = 3.275E14
+  LRANGE = 1,201
+  MASK = ones_201.dat
+  SCATTERED_LIGHT = 0.00
+  SPECTRAL_BROADENING = 0.0
+  OBSERVED_CONTINUUM = 3.10894342163e+14
+  CGS_CONTINUUM = 3.10894342163e+14
 }
 
 
 model{
   ID=Model 1
   READ_FROM_FILE=0
-  FILENAME=inverted_nodes_2.0.f0
+  FILENAME=/home/milic/inversion_code/results/Na_2016-07-03/401_800_0_139_full/C1/inverted_nodes_2.0.f0
   parameter{
   ID=TEMP
-  TAU=-3.4,-2.0,-0.8,0.0
+  TAU=-2.9,-1.7,-0.7,0.0
   VALUES=5600.0,4800.0,5200.0,6200.0
   }
   parameter{
@@ -84,3 +84,7 @@ model{
 
 #LAMBDA = 5887.7914658 - 5897.18400651
 #DLAMBDA = 0.00972312703583
+
+#LAMBDA = 6300.8921 - 6303.2671
+#DLAMBDA = 0.0213963963964
+
