--- a/cfg/synth.cfg
+++ b/cfg/synth.cfg
@@ -1,7 +1,7 @@
 atmos{
   ID=Simple Atmosphere
   TYPE=SPINOR
-  FILE=falc_low_coarse.dat
+  FILE=andres_test.dat
   GEOMETRY=PLANEPARALLEL
   RTSOLVER=Bezier
 #  ID=MuRAM snapshot
@@ -24,7 +24,7 @@ obs{
   ID=Obs 1
   EL=3.14159265359
   AZ=0.0
-  NAME=spectrum_6300.dat
+  NAME=6300_andres_test.dat
   LAMBDA = 6301.0 - 6303.0
   DLAMBDA = 0.01
   INVERT=0
