- mostly changes in plotting routines

--- a/cfg/invert_ir_iron.cfg
+++ b/cfg/invert_ir_iron.cfg
@@ -1,7 +1,7 @@
 atmos{
   ID=Simple Atmosphere
   TYPE=SPINOR
-  FILE=falc_31.dat
+  FILE=falc_36.dat
   GEOMETRY=PLANEPARALLEL
   RTSOLVER=Bezier
 #  ID=MuRAM snapshot
@@ -15,7 +15,7 @@ atmos{
 #  DY=12E3
 #  DZ=20E3
   
-  ATOM=atoms.cfg
+  ATOM=atoms_ir.cfg
   MOL=mol.cfg
 }
 
@@ -24,16 +24,20 @@ obs{
   ID=Obs 1
   EL=3.14159265359
   AZ=0.0
-  NAME=GRIS_obs_test.f0
+  NAME=/home/milic/inversion_code/data_to_invert/17sep15.f0
   LAMBDA = 15640.72548185 - 15681.22178553
   DLAMBDA = 0.0401350879074
   INVERT=1
   RETURN_ATMOS = 1
   RETURN_MODEL = 0
-  XRANGE = 1,100
+  XRANGE = 1,455
   YRANGE = 1,100
   LRANGE = 88,635
   MASK = ir_lines_mask.dat
+  SCATTERED_LIGHT = 0.12
+  SPECTRAL_BROADENING = 150.0
+  OBSERVED_CONTINUUM = 102573.0
+  CGS_CONTINUUM = 4.42E13
 }
 
 model{
@@ -42,8 +46,8 @@ model{
   FILENAME=/home/milic/inversion_code/tests/cubes/Test_1/Run_4_T3_V3_B3/c2/0.5_mag_test_nodes.f0
   parameter{
   ID=TEMP
-  TAU=-2.0,-0.6,0.3
-  VALUES=5500.0,4800.0,6600.0
+  TAU=-2.3,-1.3,-0.5,0.2
+  VALUES=6000.0,4800.0,5500.0,6600.0
   }
   parameter{
   ID=VT
