--- a/cfg/synth.cfg
+++ b/cfg/synth.cfg
@@ -1,7 +1,7 @@
 atmos{
   ID=Simple Atmosphere
   TYPE=SPINOR
-  FILE=andres_test.dat
+  FILE=falc.dat
   GEOMETRY=PLANEPARALLEL
   RTSOLVER=Bezier
 #  ID=MuRAM snapshot
@@ -15,7 +15,7 @@ atmos{
 #  DY=12E3
 #  DZ=20E3
   
-  ATOM=atoms.cfg
+  ATOM=atoms_ir.cfg
   MOL=mol.cfg
 }
 
@@ -24,9 +24,9 @@ obs{
   ID=Obs 1
   EL=3.14159265359
   AZ=0.0
-  NAME=6300_andres_test.dat
-  LAMBDA = 6301.0 - 6303.0
-  DLAMBDA = 0.01
+  NAME=spectra_15660.dat
+  LAMBDA = 15640.0 - 15670.0
+  DLAMBDA = 0.02
   INVERT=0
   RETURN_ATMOS = 1
   RETURN_MODEL = 0
