--- a/cfg/invert_ir_iron.cfg
+++ b/cfg/invert_ir_iron.cfg
@@ -42,11 +42,11 @@ obs{
 
 model{
   ID=Model 1
-  READ_FROM_FILE=0
-  FILENAME=/home/milic/inversion_code/tests/cubes/Test_1/Run_4_T3_V3_B3/c2/0.5_mag_test_nodes.f0
+  READ_FROM_FILE=1
+  FILENAME=inverted_nodes_2.0.f0
   parameter{
   ID=TEMP
-  TAU=-2.5,-1.4,-0.5,0.2
+  TAU=-2.4,-1.3,-0.5,0.2
   VALUES=4800.0,5500.0,6600.0,7000.0
   }
   parameter{
@@ -56,7 +56,7 @@ model{
   }
   parameter{
   ID=VS
-  TAU=-2.0,-0.8,0.0
+  TAU=-1.8,-0.6,0.2
   VALUES=1E5,0,-1E5
   }
 }
