--- a/cfg/synth.cfg
+++ b/cfg/synth.cfg
@@ -15,7 +15,7 @@ atmos{
 #  DY=12E3
 #  DZ=20E3
   
-  ATOM=atoms_ir.cfg
+  ATOM=atoms_10830.cfg
   MOL=mol.cfg
 }
 
@@ -24,8 +24,8 @@ obs{
   ID=Obs 1
   EL=3.14159265359
   AZ=0.0
-  NAME=spectra_15660.dat
-  LAMBDA = 15640.0 - 15670.0
+  NAME=spectra_10830.dat
+  LAMBDA = 10825.0 - 10841.0
   DLAMBDA = 0.02
   INVERT=0
   RETURN_ATMOS = 1
