Trying to implement this thing by Jaime, but it really does not work.

--- a/cfg/invert.cfg
+++ b/cfg/invert.cfg
@@ -32,7 +32,7 @@ obs{
   RETURN_MODEL = 0
   XRANGE = 1,1
   YRANGE = 1,1
-  LRANGE =600,957
+  LRANGE =500,907
   MASK = sodium_lines_mask.dat
   SCATTERED_LIGHT = 0.05
   SPECTRAL_BROADENING = 50.0
@@ -51,19 +51,14 @@ model{
   VALUES=5600.0,4800.0,5200.0,6200.0
   }
   parameter{
-  ID=VS
-  TAU=-3.5,-1.7,-0.5
-  VALUES=1E5,0.5E5,-0.5E5
-  }
-  parameter{
-  ID=B
-  TAU=-3.0,-1.6,-0.5
-  VALUES=900.0,1200.0,1500.0
-  }
-  parameter{
-  ID=THETA
+  ID=VT
   TAU=0
-  VALUES=-75.0
+  VALUES=1E5
+  }
+  parameter{
+  ID=VS
+  TAU=-3.5,-1.8,-0.5
+  VALUES=1E5,5E4,0E4
   }
 }
 
