--- a/cfg/invert.cfg
+++ b/cfg/invert.cfg
@@ -32,7 +32,7 @@ obs{
   RETURN_MODEL = 0
   XRANGE = 1,1
   YRANGE = 1,1
-  LRANGE =700,907
+  LRANGE =500,907
   MASK = sodium_lines_mask.dat
   SCATTERED_LIGHT = 0.05
   SPECTRAL_BROADENING = 50.0
@@ -59,6 +59,16 @@ model{
   ID=VS
   TAU=-3.5,-1.8,-0.5
   VALUES=1E5,5E4,0E4
+  }
+  parameter{
+  ID=B
+  TAU=-3.0,-0.5
+  VALUES = 1000.0,2000.0
+  }
+  parameter{
+  ID=THETA
+  TAU=0
+  VALUES=75
   }
 }
 
