--- a/cfg/iron_15650.cfg
+++ b/cfg/iron_15650.cfg
@@ -40,13 +40,19 @@ atom{
         ASYMP=Fischel
       }
     }
+    #LINES
+    # 15645.02 : 6 -> 10
+    # 15648.51 : 1 -> 4
+    # 15652.88 : 5 -> 9
+    # 15662.02 : 2 -> 7
+    # 15665.24 : 3 -> 8
     level{ 
       N=1
       EE=5.4260419
       G=3
       J=2
       L=0
-      GL=0.0
+      GL=3.0
     }
     level{ 
       N=2
@@ -54,7 +60,7 @@ atom{
       G=11
       J=10
       L=0
-      GL=0.0
+      GL=1.42
       A=1e+0
     }
     level{ 
@@ -63,7 +69,7 @@ atom{
       G=3
       J=2
       L=0
-      GL=0.0
+      GL=0.01
       A=1e+0, 1e+0
     }
      level{ 
@@ -72,7 +78,7 @@ atom{
       G=3
       J=2
       L=1
-      GL=0.0
+      GL=2.95
       A=1.94e+06,1e+0,1e+0
     }
     level{ 
@@ -81,7 +87,7 @@ atom{
       G=11
       J=10
       L=2
-      GL=0.0
+      GL=1.51
       A=1e+0, 1e+0,1e+0, 1e+0
     }
     level{ 
@@ -90,7 +96,7 @@ atom{
       G=5
       J=4
       L=1
-      GL=0.0
+      GL=2.32
       A=1e+0, 1e+0, 1e+0, 1e+0, 1e+0
     }
     level{ 
@@ -99,7 +105,7 @@ atom{
       G=9
       J=8
       L=1
-      GL=0.0
+      GL=1.39
       A=1e+0,4.68e+06, 1e+0, 1e+0, 1e+0, 1e+0
     }
     level{ 
@@ -108,8 +114,8 @@ atom{
       G=3
       J=2
       L=1
-      GL=0.0
-      A=1e+0,1e+0,4.68e+06,1e+0,1e+0,1e+0,1e+0
+      GL=1.33
+      A=1e+0,1e+0,3.44e+06,1e+0,1e+0,1e+0,1e+0
     }
     level{ 
       N=9
@@ -117,7 +123,7 @@ atom{
       G=9
       J=8
       L=3
-      GL=0.0
+      GL=1.5
       A=1e+0, 1e+0,1e+0, 1e+0,2.43e+06,1e+0,1e+0, 1e+0
     }
     level{ 
@@ -126,8 +132,8 @@ atom{
       G=5
       J=4
       L=2
-      GL=0.0
-      A=1e+0,1e+0,1e+0,1e+0,1e+0,1.21e+06,1e+0,1e+0,1e+0
+      GL=1.86
+      A=1e+0,1e+0,1e+0,1e+0,1e+0,2.2e+06,1e+0,1e+0,1e+0
     }
   }
   ion{
