- implemented instrumental broadening due to the filter - NEEDS TESTING - changed rf normalization prior to inversion - misc stuff - -

--- a/cfg/atoms.cfg
+++ b/cfg/atoms.cfg
@@ -6,9 +6,9 @@ ATOM=carbon.cfg
 ATOM=nitrogen.cfg
 ATOM=oxygen.cfg
 ATOM=magnesium.cfg
-ATOM=calcium.cfg
+ATOM=calcium_debug.cfg
 ATOM=silicon.cfg
 ATOM=aluminium.cfg
-ATOM=iron_5892.cfg
-ATOM=nickel.cfg
-ATOM=sodium.cfg
+#ATOM=iron_5892.cfg
+#ATOM=nickel.cfg
+#ATOM=sodium.cfg
