--- a/cfg/synth.cfg
+++ b/cfg/synth.cfg
@@ -1,7 +1,7 @@
 atmos{
   ID=Simple Atmosphere
-  TYPE=SPINOR
-  FILE=falc.dat
+  TYPE=SPINOR3D
+  FILE=BIFROST_en024048_bin_1x1_101_300_101_300.f0
   GEOMETRY=PLANEPARALLEL
   RTSOLVER=Bezier
 #  ID=MuRAM snapshot
@@ -15,7 +15,7 @@ atmos{
 #  DY=12E3
 #  DZ=20E3
   
-  ATOM=atoms_10830.cfg
+  ATOM=atoms.cfg
   MOL=mol.cfg
 }
 
@@ -24,14 +24,14 @@ obs{
   ID=Obs 1
   EL=3.14159265359
   AZ=0.0
-  NAME=spectra_10830.dat
-  LAMBDA = 10825.0 - 10841.0
+  NAME=spectra_test2.dat
+  LAMBDA = 8540.0-8543.0
   DLAMBDA = 0.02
   INVERT=0
   RETURN_ATMOS = 1
   RETURN_MODEL = 0
-  XRANGE = 1,1
-  YRANGE = 1,1
+  XRANGE = 41,41
+  YRANGE = 171,171
   LRANGE = 495,967
   MASK = sodium_lines_mask.dat
 }
