Added option of inputing number of iterations and the starting l-m parameter for the inversion. As usual, meddled with plotting functions.

--- a/cfg/iron_6300lines.cfg
+++ b/cfg/iron_6300lines.cfg
@@ -4,14 +4,13 @@ atom{
   Z=2
   MASS=55.854
   ABUND=3.1622778e-05
-#
+  NLTE=0
   ion{
     CHARGE=0
     EION=7.896
     partition{
       TYPE=TRAV
       G0=9
-      #
       trav{
         XION=7.896
         G2=60
@@ -20,7 +19,6 @@ atom{
         ALPHA=14.4102,2.705,421.6612,940.1484 
         ASYMP=Fischel
       }
-      #
       trav{
         XION=8.195
         G2=60
@@ -29,7 +27,6 @@ atom{
         ALPHA=36.2187, 22.8883, 239.5997, 825.2919 
         ASYMP=Fischel
       }
-      #
       trav{
         XION=8.297
         G2=60
@@ -43,8 +40,9 @@ atom{
       N=1
       EE=3.6536932
       G=5
-      J=2
+      J=4
       L=1
+      GL=1.83
       bf{
         TYPE=PHY
         LAMBDA= 100
@@ -57,6 +55,7 @@ atom{
       G=3
       J=2
       L=1
+      GL=2.5
       A=1e+1
       bf{
         TYPE=PHY
@@ -68,9 +67,10 @@ atom{
       N=3
       EE=5.6206839
       G=5
-      A=8.633e+06, 1e+1
       J=4
       L=0
+      GL=1.5
+      A=6.42e+06, 1e+1
       bf{
         TYPE=PHY
         LAMBDA= 100
@@ -81,9 +81,10 @@ atom{
       N=4
       EE=5.6530699
       G=1
-      A=1e+1, 11.619e+06, 1e+1
       J=0
       L=0
+      GL=0.0
+      A=1e+1, 11.61e+06, 1e+1
       bf{
         TYPE=PHY
         LAMBDA= 100
@@ -107,7 +108,6 @@ atom{
       }
     }
   }
-#
   ion{
     CHARGE=2
     partition{
