--- a/cfg/synth.cfg
+++ b/cfg/synth.cfg
@@ -1,7 +1,7 @@
 atmos{
   ID=Simple Atmosphere
-  TYPE=SPINOR3D
-  FILE=BIFROST_en024048_bin_1x1_101_300_101_300.f0
+  TYPE=SPINOR
+  FILE=falc.dat
   GEOMETRY=PLANEPARALLEL
   RTSOLVER=Bezier
 #  ID=MuRAM snapshot
@@ -25,13 +25,13 @@ obs{
   EL=3.14159265359
   AZ=0.0
   NAME=spectra_test2.dat
-  LAMBDA = 8540.0-8543.0
-  DLAMBDA = 0.02
+  LAMBDA = 5170.0-5175.0
+  DLAMBDA = 0.01
   INVERT=0
   RETURN_ATMOS = 1
   RETURN_MODEL = 0
-  XRANGE = 41,41
-  YRANGE = 171,171
+  XRANGE = 1,1
+  YRANGE = 1,1
   LRANGE = 495,967
   MASK = sodium_lines_mask.dat
 }
