--- a/cfg/atoms.cfg
+++ b/cfg/atoms.cfg
@@ -6,9 +6,10 @@ ATOM=carbon.cfg
 ATOM=nitrogen.cfg
 ATOM=oxygen.cfg
 ATOM=magnesium.cfg
-ATOM=calcium_debug.cfg
+ATOM=calcium.cfg
 ATOM=silicon.cfg
 ATOM=aluminium.cfg
+ATOM=iron_6300lines.cfg
 #ATOM=iron_5892.cfg
 #ATOM=nickel.cfg
 #ATOM=sodium.cfg
