--- a/cfg/synth.cfg
+++ b/cfg/synth.cfg
@@ -15,7 +15,7 @@ atmos{
 #  DY=12E3
 #  DZ=20E3
   
-  ATOM=atoms.cfg
+  ATOM=atoms_ca_ir.cfg
   MOL=mol.cfg
 }
 
@@ -24,9 +24,9 @@ obs{
   ID=Obs 1
   EL=3.14159265359
   AZ=0.0
-  NAME=spectra_test2.dat
-  LAMBDA = 5170.0-5175.0
-  DLAMBDA = 0.01
+  NAME=spectra_ca_h.dat
+  LAMBDA = 3967.22-3999.98
+  DLAMBDA = 0.078
   INVERT=0
   RETURN_ATMOS = 1
   RETURN_MODEL = 0
