a simple sync/update so we work on the development of the code with the newest possible version

--- a/cfg/invert_ir_iron_synth.cfg
+++ b/cfg/invert_ir_iron_synth.cfg
@@ -24,14 +24,14 @@ obs{
   ID=Obs 1
   EL=3.14159265359
   AZ=0.0
-  NAME=/home/milic/inversion_code/results/GREGOR_IR/MURAM_SYNTH/full_stokes/50G.ngrey.288x100x288_smeared_degraded_resampled_binned_1.f0
+  NAME=/home/milic/inversion_code/results/GREGOR_IR/MURAM_SYNTH/full_stokes/50G.ngrey.288x100x288_synth_degraded_resampled.f0
   LAMBDA = 15640.0 - 15670.0
   DLAMBDA = 0.06
   INVERT=1
   RETURN_ATMOS = 1
   RETURN_MODEL = 0
-  XRANGE = 1,96
-  YRANGE = 1,96
+  XRANGE = 1,100
+  YRANGE = 1,100
   LRANGE = 51,451
   MASK = mask_ir_synth_501.dat
   SCATTERED_LIGHT = 0
@@ -45,11 +45,11 @@ obs{
 model{
   ID=Model 1
   READ_FROM_FILE=1
-  FILENAME=/home/milic/inversion_code/results/GREGOR_IR/MURAM_synth_inversion/degraded_spectrally_spatially_0.3_binned_4x4/C5/inverted_nodes_0.3.f0
+  FILENAME=/home/milic/inversion_code/results/GREGOR_IR/MURAM_synth_inversion/degraded_spectrally/C23/nodes_new.f0
   parameter{
   ID=TEMP
-  TAU=-2.7,-1.6,-0.7,0.0,0.5
-  VALUES=5000.0,4800.0,5500.0,6600.0,7000.0
+  TAU=-3.2,-2.1,-1.2,-0.5,0.0,0.5
+  VALUES=4500.0,4800.0,5000.0,5500.0,6600.0,7000.0
   }
   parameter{
   ID=VT
@@ -58,12 +58,12 @@ model{
   }
   parameter{
   ID=VS
-  TAU=-2.0,-0.9,0.0,0.5
+  TAU=-2.0,-0.8,0.0,0.5
   VALUES=1E5,0,-5E4,-1E5
   }
   parameter{
   ID=B
-  TAU=-2.0,-0.9,0.0,0.5
+  TAU=-2.0,-0.8,0.0,0.5
   VALUES=300.0,400.0,800.0,1000.0
   }
   parameter{
