--- a/cfg/atoms.cfg
+++ b/cfg/atoms.cfg
@@ -9,7 +9,7 @@ ATOM=magnesium.cfg
 ATOM=calcium.cfg
 ATOM=silicon.cfg
 ATOM=aluminium.cfg
-ATOM=iron_6300lines.cfg
-#ATOM=iron_5892.cfg
-#ATOM=nickel.cfg
-#ATOM=sodium.cfg
+#ATOM=iron.cfg
+ATOM=iron_5892.cfg
+ATOM=nickel.cfg
+ATOM=sodium.cfg
