--- a/cfg/synth_cube.cfg
+++ b/cfg/synth_cube.cfg
@@ -1,10 +1,10 @@
 atmos{
   ID=Simple Atmosphere
   TYPE=SPINOR3D
-  FILE=50G.ngrey.288x100x288.f0
+  FILE=BIFROST_en024048_bin_1x1_101_300_101_300.f0
   GEOMETRY=PLANEPARALLEL
   RTSOLVER=Bezier
-  ATOM=atoms_ir.cfg
+  ATOM=atoms.cfg
   MOL=mol.cfg
 }
 
@@ -13,47 +13,20 @@ obs{
   ID=Obs 1
   EL=3.14159265359
   AZ=0.0
-  NAME=50G.ngrey.288x100x288_synth.f0
-  LAMBDA = 15640.0 - 15670.0
-  DLAMBDA = 0.02
+  NAME=sodium_BIFROST_test.f0
+  LAMBDA = 5887.0 - 5897.0
+  DLAMBDA = 0.01
   INVERT=0
   RETURN_ATMOS = 1
   RETURN_MODEL = 0
-  XRANGE = 1,288
-  YRANGE = 1,288
+  XRANGE = 1,50
+  YRANGE = 1,50
   LRANGE = 650,957
   MASK = sodium_lines_mask.dat
   SCATTERED_LIGHT = 0.04
   SPECTRAL_BROADENING = 50
   OBSERVED_CONTINUUM = 28.69
   CGS_CONTINUUM = 3.275E14
-}
-
-
-model{
-  ID=Model 1
-  READ_FROM_FILE=0
-  FILENAME=/home/milic/inversion_code/results/Na_2016-07-03/401_800_0_139/C2/mag_test_nodes_smeared_1.0.f0
-  parameter{
-  ID=TEMP
-  TAU=-2.6,-1.6,-0.7,0.0
-  VALUES=5500.0,4800.0,5200.0,6200.0
-  }
-  parameter{
-  ID=VS
-  TAU=-3.5,-1.7,-0.5
-  VALUES=1E5,0.5E5,-0.5E5
-  }
-  parameter{
-  ID=B
-  TAU=-3.5,-1.7,-0.5
-  VALUES=1500.0,1300.0,1200.0
-  }
-  parameter{
-  ID=THETA
-  TAU=0
-  VALUES=-75.0
-  }
 }
 
 #LAMBDA = 5895.0 - 5897.0
